1566951048 | 37 files | M bin/version.txt,  M content/panorama/localization/tenfoot_english.txt,  M drivers/htc/resources/input/vive_controller_profile.json,  M resources/rendermodels/vr_controller_vive_1_5/vr_controller_vive_1_5.json,  M resources/webinterface/dashboard/localization/bindingui_brazilian.json,  M resources/webinterface/dashboard/localization/bindingui_dutch.json,  M resources/webinterface/dashboard/localization/bindingui_english.json,  M resources/webinterface/dashboard/localization/bindingui_finnish.json,  M resources/webinterface/dashboard/localization/bindingui_french.json,  M resources/webinterface/dashboard/localization/bindingui_german.json,  M resources/webinterface/dashboard/localization/bindingui_italian.json,  M resources/webinterface/dashboard/localization/bindingui_japanese.json,  M resources/webinterface/dashboard/localization/bindingui_portuguese.json,  M resources/webinterface/dashboard/localization/bindingui_schinese.json,  M resources/webinterface/dashboard/localization/bindingui_swedish.json,  M res
https://steamdb.info/patchnotes/4144451/

--- a/content/panorama/localization/tenfoot_english.txt
+++ b/content/panorama/localization/tenfoot_english.txt
@@ -340,6 +340,7 @@
 	"VRSettingsGeneral" "SteamVR Settings"
 	"VRSettingsBindingUITitle" "Controller Settings"
 	"VRSettingsTrackerUITitle" "Manage Vive Trackers"
+	"VRSettingsDisplaySettingsTitle" "Display Settings"
 	"VRSettingsChaperone" "Chaperone Settings"
 	"VRSettingsBackground" "Customize"
 	"VRSettingsCamera" "Camera Settings"
