--- a/resources/webinterface/dashboard/localization/bindingui_brazilian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_brazilian.json
@@ -185,7 +185,7 @@
   "BindingUI_List_View": "Exibir",
   "BindingUI_List_LastUpdated": "Última atualização: ",
   "BindingUI_List_NoBindingsFound": "Sem configurações",
-  "BindingUI_List_CreateBinding": "Create New Binding",
+  "BindingUI_List_CreateBinding": "Criar nova configuração",
   "BindingUI_Mode_Delete_Confirm": "Eliminar modo \"%1$s\" de \"%2$s\"?",
   "BindingUI_SavePersonal": "Salvar configuração para uso pessoal",
   "BindingUI_PublishToWorkshop": "Publicar no Workshop",
@@ -228,7 +228,7 @@
   "BindingUI_SteamVRUnavailable": "Inicie o SteamVR para continuar usando a interface de configuração",
   "BindingUI_ErrorLoadingBindingTitle": "Erro ao carregar configuração",
   "input_binding_load_failed": "Não foi possível carregar as configurações de \"%1$s\". Escolha outra opção.",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "Não há configuração de %2$s para %1$s definida. Por favor, selecione uma configuração na lista ou crie uma nova.",
   "unknown_application": "Aplicativo desconhecido",
   "InputDebugger_Title": "Depurador",
   "InputDebugger_Actions": "Ações",
@@ -237,8 +237,8 @@
   "InputDebugger_UnknownPath": "/?",
   "InputDebugger_Unbound": "Não designado",
   "BindingUI_InputDebugger": "Depurador",
-  "BindingUI_WindowTitle_ControllerBinding": "Controller Binding",
-  "BindingUI_WindowTitle_ManageTrackers": "Manage Vive Trackers",
+  "BindingUI_WindowTitle_ControllerBinding": "Configuração de controle",
+  "BindingUI_WindowTitle_ManageTrackers": "Gerenciamento de rastreadores Vive",
   "ActionManifestError_ManifestParseError": "O manifesto de ações de \"%1$s\" tem um problema: \"%2$s\".",
   "ActionManifestError_FileNotFound": "O manifesto de ações de \"%1$s\" não foi encontrado.",
   "ActionManifestError_JSONParseError": "O manifesto de ações de \"%1$s\" não contém um JSON válido.",
@@ -249,18 +249,18 @@
   "TrackerEditor_SelectControllerRole": "Quais mãos:",
   "SaveNotice_Saving": "Salvando...",
   "SaveNotice_Uploading": "Carregando...",
-  "LegacySetupTab": "Set Up Legacy Actions",
-  "ShowAllAliases": "Show Hidden Actions",
-  "DeleteSimulatedAction": "Delete",
-  "AddSimulatedAction": "Add Action",
-  "UnnamedSimAction": "Unnamed Action ",
-  "ShowActionButton": "Show",
-  "HideActionButton": "Hide",
-  "LegacySetup_SimulatedActionHeader": "Simulated Actions",
-  "LegacySetup_ActionAliasesHeader": "Action Aliases",
-  "SimulatedAction_FakeTrigger": "Simulated Trigger Pull",
-  "SimulatedAction_FakeTrackpadClick": "Simulated Trackpad Click",
-  "TrackpadClickLeft": "Left Trackpad",
-  "TrackpadClickRight": "Right Trackpad",
-  "TrackpadClickNone": "Select Trackpad"
+  "LegacySetupTab": "Definir ações legado",
+  "ShowAllAliases": "Exibir ações ocultas",
+  "DeleteSimulatedAction": "Excluir",
+  "AddSimulatedAction": "Adicionar ação",
+  "UnnamedSimAction": "Ação sem título ",
+  "ShowActionButton": "Exibir",
+  "HideActionButton": "Ocultar",
+  "LegacySetup_SimulatedActionHeader": "Ações simuladas",
+  "LegacySetup_ActionAliasesHeader": "Nomes das ações",
+  "SimulatedAction_FakeTrigger": "Pressionar de gatilho simulado",
+  "SimulatedAction_FakeTrackpadClick": "Clique de trackpad simulado",
+  "TrackpadClickLeft": "Trackpad esquerdo",
+  "TrackpadClickRight": "Trackpad direito",
+  "TrackpadClickNone": "Selecionar trackpad"
 }
