--- a/resources/webinterface/dashboard/localization/bindingui_finnish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_finnish.json
@@ -61,34 +61,34 @@
   "SourceInputMode_SmoothScroll_MinThrowVelocity": "Heiton miniminopeus:",
   "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Vierityksen maksiminopeus:",
   "SourceInputMode_SmoothScroll_Deceleration": "Hidastuksen määrä:",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximum Previous Velocities To Average:",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Aiemmat vähimmäisnopeudet keskiarvoon nähden:",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Aiemmat enimmäisnopeudet keskiarvoon nähden:",
   "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Heiton päättymisen nopeus:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Edge Scroll Threshold:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Edge Scroll Threshold Vertical Bias:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Edge Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Reunavierityksen raja-arvo:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Reunavierityksen raja-arvo pystysuunnassa:",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Reunavierityksen nopeus:",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Reunavierityksen vähimmäispyyhkäisy:",
   "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Horisontaalisen vierityksen edellyttämä suhdeluku:",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Syötteen minimisuuruus:",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Vähimmäissyötteen suuruusluokka:",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Vieritysasteikko:",
   "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Kosketuksen tuntopalaute:",
   "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Käänteisyyden esto käytössä:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Kosketuksen herkkyys:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Pyyhkäisyn herkkyys:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Pyyhkäisyn suunnanvaihdon herkkyys:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Aloituskynnys:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Siirtokynnys:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Aloituksen raja-arvo:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Siirron raja-arvo:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Pyyhkäisyn suunnanvaihdon kynnys:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Flick Scrolling Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Flick Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Flick Scroll Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Flick Momentum:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Slide and Hold Scrolling:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H-kertoja:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H Pulse Rate:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H Top Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "S&H Bottom Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "S&H-haptiikka:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Pyyhkäisyllä vieritys käytössä:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Pyyhkäisyn raja-arvo:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Pyyhkäisyn vierityskerroin:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Pyyhkäisyn liikemäärä:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Pyyhkäise ja pysäytä -vieritys:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "Pyyhkäise ja pysäytä -vierityskerroin:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "Pyyhkäise ja pysäytä -pulssikerroin:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "Pyyhkäise ja pysäytä -yläreuna:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "Pyyhkäise ja pysäytä -alareuna:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "Pyyhkäise ja pysäytä -haptiikka:",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Vierityskerroin:",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Vieritysasteikko:",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "Kuollut alue (horisontaalinen):",
@@ -185,7 +185,7 @@
   "BindingUI_List_View": "Katso",
   "BindingUI_List_LastUpdated": "Päivitetty viimeksi: ",
   "BindingUI_List_NoBindingsFound": "Ei määrityksiä",
-  "BindingUI_List_CreateBinding": "Create New Binding",
+  "BindingUI_List_CreateBinding": "Luo uusi määritys",
   "BindingUI_Mode_Delete_Confirm": "Poistatko tilan %1$s syötemenetelmästä %2$s?",
   "BindingUI_SavePersonal": "Tallenna oma määritys",
   "BindingUI_PublishToWorkshop": "Julkaise workshopissa",
@@ -228,7 +228,7 @@
   "BindingUI_SteamVRUnavailable": "Käynnistä SteamVR jatkaaksesi määrityskäyttöliittymän käyttöä",
   "BindingUI_ErrorLoadingBindingTitle": "Määritystiedoston lataus epäonnistui",
   "input_binding_load_failed": "Pelin %1$s syötemääritysten lataaminen epäonnistui. Valitse toinen määritysvaihtoehto.",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "Syötteen %1$s asetusta %2$s ei määritetty. Luo uusi tai valitse olemassaoleva määritysvaihtoehto luettelosta.",
   "unknown_application": "Tuntematon sovellus",
   "InputDebugger_Title": "Syötteen virheenkorjaus",
   "InputDebugger_Actions": "Toiminnot",
