--- a/resources/webinterface/dashboard/localization/bindingui_french.json
+++ b/resources/webinterface/dashboard/localization/bindingui_french.json
@@ -19,10 +19,10 @@
   "SourceInputMode_trigger": "Gâchette",
   "SourceInputMode_Click": "Clic",
   "SourceInputMode_Touch": "Toucher",
-  "SourceInputMode_Held": "Enfoncé",
-  "SourceInputMode_Single": "Simple",
-  "SourceInputMode_Double": "Double",
-  "SourceInputMode_Long": "Long",
+  "SourceInputMode_Held": "Appui continu",
+  "SourceInputMode_Single": "Appui simple",
+  "SourceInputMode_Double": "Appui double",
+  "SourceInputMode_Long": "Appui long",
   "SourceInputMode_North": "Nord",
   "SourceInputMode_South": "Sud",
   "SourceInputMode_East": "Est",
@@ -185,7 +185,7 @@
   "BindingUI_List_View": "Afficher",
   "BindingUI_List_LastUpdated": "Dernière mise à jour : ",
   "BindingUI_List_NoBindingsFound": "Aucune configuration trouvée",
-  "BindingUI_List_CreateBinding": "Create New Binding",
+  "BindingUI_List_CreateBinding": "Créer une nouvelle association",
   "BindingUI_Mode_Delete_Confirm": "Supprimer le mode %1$s de l'entrée %2$s ?",
   "BindingUI_SavePersonal": "Enregistrer la configuration personnelle",
   "BindingUI_PublishToWorkshop": "Publier sur le Workshop",
@@ -222,13 +222,13 @@
   "BindingUI_List_Developer_Binding_Description": "Voici les configurations officielles publiées par le développeur de ce jeu",
   "BindingUI_List_Legacy_Binding_Title": "Configurations par défaut pour %1$s",
   "BindingUI_List_Legacy_Binding_Description": "Voici les configurations par défaut du jeu.",
-  "BindingUI_List_PublishedBy": "Créées par %1$s",
+  "BindingUI_List_PublishedBy": "Créée par %1$s",
   "BindingUI_List_Autosave": "%1$s (changements locaux)",
   "BindingList_TrackerEdit": "Gérer les trackers",
   "BindingUI_SteamVRUnavailable": "Veuillez lancer SteamVR pour continuer à utiliser l'interface de configuration",
   "BindingUI_ErrorLoadingBindingTitle": "Impossible de charger le fichier de configuration",
   "input_binding_load_failed": "Impossible de charger les associations d'entrées pour %1$s. Veuillez sélectionner une autre option de configuration.",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "L'association de %2$s pour %1$s n'a pas été configurée. Veuillez sélectionner une option d'association dans la liste ou créez-en une nouvelle.",
   "unknown_application": "Application inconnue",
   "InputDebugger_Title": "Débogueur d’entrées",
   "InputDebugger_Actions": "Actions",
@@ -252,7 +252,7 @@
   "LegacySetupTab": "Configurer les actions classiques",
   "ShowAllAliases": "Afficher les actions masquées",
   "DeleteSimulatedAction": "Supprimer",
-  "AddSimulatedAction": "Ajouter l'action",
+  "AddSimulatedAction": "Ajouter une action",
   "UnnamedSimAction": "Action sans nom ",
   "ShowActionButton": "Afficher",
   "HideActionButton": "Masquer",
