--- a/resources/webinterface/dashboard/localization/bindingui_german.json
+++ b/resources/webinterface/dashboard/localization/bindingui_german.json
@@ -185,7 +185,7 @@
   "BindingUI_List_View": "Anzeigen",
   "BindingUI_List_LastUpdated": "Zuletzt aktualisiert: ",
   "BindingUI_List_NoBindingsFound": "Keine Zuordnungen gefunden",
-  "BindingUI_List_CreateBinding": "Create New Binding",
+  "BindingUI_List_CreateBinding": "Neue Zuordnung erstellen",
   "BindingUI_Mode_Delete_Confirm": "%1$s Modus aus %2$s löschen?",
   "BindingUI_SavePersonal": "Persönliche Zuordnung speichern",
   "BindingUI_PublishToWorkshop": "Im Workshop veröffentlichen",
@@ -228,7 +228,7 @@
   "BindingUI_SteamVRUnavailable": "Bitte führen Sie SteamVR aus, um die Zuordnungsoberfläche weiterhin nutzen zu können",
   "BindingUI_ErrorLoadingBindingTitle": "Laden der Zuordnungsdatei fehlgeschlagen",
   "input_binding_load_failed": "Eingabezuordnungen für %1$s fehlgeschlagen. Bitte wählen Sie eine andere Zuordnungsoption aus.",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "Belegung %2$s für %1$s nicht festgelegt. Bitte wählen Sie eine Tastenbelgungsoption aus der Liste oder erstellen Sie eine neue.",
   "unknown_application": "Unbekannte Anwendung",
   "InputDebugger_Title": "Eingabe-Debugger",
   "InputDebugger_Actions": "Aktionen",
