--- a/resources/webinterface/dashboard/localization/bindingui_portuguese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_portuguese.json
@@ -28,7 +28,7 @@
   "SourceInputMode_East": "Este",
   "SourceInputMode_West": "Oeste",
   "SourceInputMode_Center": "Centro",
-  "SourceInputMode_Scroll": "Deslocar",
+  "SourceInputMode_Scroll": "Deslocamento",
   "SourceInputMode_Position": "Posição",
   "SourceInputMode_Pull": "Pressionar",
   "SourceInputMode_Force": "Forçar",
@@ -47,7 +47,7 @@
   "SourceInputMode_TouchInitialState": "Começar com ação de toque:",
   "SourceInputMode_OverlapPercent": "Percentagem de sobreposição:",
   "SourceInputMode_DeadzonePercent": "Percentagem de zona morta:",
-  "SourceInputMode_StickyDpad": "Continuar ação do Dpad ao ativá-lo",
+  "SourceInputMode_StickyDpad": "Continuar ação do Dpad ao ativar",
   "SourceInputMode_LongPressDelay": "Atraso do pressionar longo:",
   "SourceInputMode_DoublePressDelay": "Atraso do pressionar duplo:",
   "SourceInputMode_ScrollMode": "Modo de deslocamento:",
@@ -55,24 +55,24 @@
   "SourceInputMode_ScrollMode_Discrete": "Discreto (Como uma roda de rato)",
   "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "Proporção do trackpad (l/a):",
   "SourceInputMode_SmoothScroll_Multiplier": "Multiplicador de deslocamento:",
-  "SourceInputMode_SmoothScroll_AccelerationPower": "Poder de aceleração:",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Haptic Notches Per Trackpad Height:",
+  "SourceInputMode_SmoothScroll_AccelerationPower": "Potência de aceleração:",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Marcas hápticas por altura do trackpad:",
   "SourceInputMode_SmoothScroll_StartDistance": "Distância de deslocamento mínima:",
   "SourceInputMode_SmoothScroll_MinThrowVelocity": "Velocidade de lançamento mínima:",
   "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Velocidade de deslocamento máxima:",
   "SourceInputMode_SmoothScroll_Deceleration": "Valor de desaceleração:",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Velocidade de cancelamento de lançamento:",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Mínimo de velocidades anteriores para a média:",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Máximo de velocidades anteriores para a média:",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Velocidade de abrandamento de lançamento:",
   "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Limiar de deslocamento nas bordas:",
   "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Tendência vertical de deslocamento nas bordas:",
   "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Velocidade de deslocamento nas bordas:",
   "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Deslize mínimo para deslocamento nas bordas:",
   "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Proporção necessária para deslocamento horizontal:",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Magnitude de input mínimo:",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Magnitude de entrada mínima:",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Escala de deslocamento:",
-  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptic On Touch:",
-  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Reversal Supression Enabled:",
+  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Resposta háptica ao tocar:",
+  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Supressão de inversão ativa:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Sensibilidade de toque:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Sensibilidade de deslize:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Sensibilidade de inversão:",
@@ -80,8 +80,8 @@
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Limiar ao mover:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Limiar de inversão:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Deslocamento por movimento rápido:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Limiar do movimento rápido:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Multiplicador do deslocamento por movimento:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Limiar de movimento rápido:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Multiplicador de deslocamento por movimento:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Ímpeto de movimento rápido:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Deslocamento ao deslizar+manter:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "Multiplicador de D+M:",
@@ -185,7 +185,7 @@
   "BindingUI_List_View": "Ver",
   "BindingUI_List_LastUpdated": "Última atualização: ",
   "BindingUI_List_NoBindingsFound": "Sem configurações",
-  "BindingUI_List_CreateBinding": "Create New Binding",
+  "BindingUI_List_CreateBinding": "Criar config. nova",
   "BindingUI_Mode_Delete_Confirm": "Eliminar modo \"%1$s\" de \"%2$s\"?",
   "BindingUI_SavePersonal": "Guardar config. pessoal",
   "BindingUI_PublishToWorkshop": "Publicar no Workshop",
@@ -228,7 +228,7 @@
   "BindingUI_SteamVRUnavailable": "Deixa o SteamVR aberto para poderes usar a interface de configuração de controlos",
   "BindingUI_ErrorLoadingBindingTitle": "Erro ao carregar configuração",
   "input_binding_load_failed": "Não foi possível carregar as configurações de \"%1$s\". Seleciona outra opção.",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "%2$s - A configuração para %1$s não foi definida. Seleciona uma opção da lista ou cria uma nova.",
   "unknown_application": "Aplicação desconhecida",
   "InputDebugger_Title": "Debugger",
   "InputDebugger_Actions": "Ações",
@@ -258,7 +258,7 @@
   "HideActionButton": "Ocultar",
   "LegacySetup_SimulatedActionHeader": "Ações simuladas",
   "LegacySetup_ActionAliasesHeader": "Nomes de ações",
-  "SimulatedAction_FakeTrigger": "Pressionar simulado de gatilho",
+  "SimulatedAction_FakeTrigger": "Pressionar de gatilho simulado",
   "SimulatedAction_FakeTrackpadClick": "Clique de trackpad simulado",
   "TrackpadClickLeft": "Trackpad esquerdo",
   "TrackpadClickRight": "Trackpad direito",
