--- a/resources/webinterface/dashboard/localization/bindingui_swedish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_swedish.json
@@ -1,5 +1,5 @@
 {
-  "language": "svenska",
+  "language": "swedish",
   "holographic_controller": "Windows Mixed Reality-kontroll",
   "holographic_hmd": "Windows Mixed Reality-headset",
   "SourceInputMode_UseAs": "Använd som %1$s",
@@ -7,15 +7,15 @@
   "SourceInputMode_none": "Oanvänd",
   "SourceInputMode_button": "Knapp",
   "SourceInputMode_trackpad": "Styrplatta",
-  "SourceInputMode_joystick": "Joystick",
+  "SourceInputMode_joystick": "Styrspak",
   "SourceInputMode_complex_button": "Komplex knapp",
   "SourceInputMode_toggle_button": "På/av-knapp",
   "SourceInputMode_dpad_click": "Klick med styrkors",
   "SourceInputMode_dpad_touch": "Beröring av styrkors",
   "SourceInputMode_dpad": "Styrkors",
   "SourceInputMode_radial": "Cirkelmeny",
-  "SourceInputMode_scroll": "Skrolla",
-  "SourceInputMode_Force_Sensor": "Kraftsensor",
+  "SourceInputMode_scroll": "Skrollning",
+  "SourceInputMode_Force_Sensor": "Trycksensor",
   "SourceInputMode_trigger": "Avtryckare",
   "SourceInputMode_Click": "Klick",
   "SourceInputMode_Touch": "Beröring",
@@ -27,8 +27,8 @@
   "SourceInputMode_South": "Syd",
   "SourceInputMode_East": "Öst",
   "SourceInputMode_West": "Väst",
-  "SourceInputMode_Center": "Centrum",
-  "SourceInputMode_Scroll": "Scrolla",
+  "SourceInputMode_Center": "Mitten",
+  "SourceInputMode_Scroll": "Skrollning",
   "SourceInputMode_Position": "Position",
   "SourceInputMode_Pull": "Dra",
   "SourceInputMode_Force": "Kraft",
@@ -53,50 +53,50 @@
   "SourceInputMode_ScrollMode": "Skrolläge:",
   "SourceInputMode_ScrollMode_Smooth": "Mjuk (som en styrplatta)",
   "SourceInputMode_ScrollMode_Discrete": "Diskret (som ett mushjul)",
-  "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "Bildförhållande för styrplatta (b/h):",
+  "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "Höjd/breddförhållande för styrplatta:",
   "SourceInputMode_SmoothScroll_Multiplier": "Skrollmultiplikator:",
   "SourceInputMode_SmoothScroll_AccelerationPower": "Accelerationskraft:",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Haptic Notches Per Trackpad Height:",
-  "SourceInputMode_SmoothScroll_StartDistance": "Minimum Scroll Distance:",
-  "SourceInputMode_SmoothScroll_MinThrowVelocity": "Minimum Throw Velocity:",
-  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Maximum Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_Deceleration": "Deceleration Amount:",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Thrown Termination Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Edge Scroll Threshold:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Edge Scroll Threshold Vertical Bias:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Edge Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
-  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Ratio Needed For Horizontal Scroll:",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimum Input Magnitude:",
-  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Scroll Scale:",
-  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptic On Touch:",
-  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Reversal Supression Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Touch Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Swipe Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Reversal Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Start Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Move Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Reversal Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Flick Scrolling Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Flick Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Flick Scroll Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Flick Momentum:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Slide and Hold Scrolling:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H Pulse Rate:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H Top Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "S&H Bottom Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "S&H Haptic:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Scroll Rate:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Scroll Scale:",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "DeadZone H:",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "DeadZone V:",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Haptiska hack per styrplattehöjd:",
+  "SourceInputMode_SmoothScroll_StartDistance": "Minsta skrollavstånd:",
+  "SourceInputMode_SmoothScroll_MinThrowVelocity": "Minsta kasthastighet:",
+  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Max. skrollhastighet:",
+  "SourceInputMode_SmoothScroll_Deceleration": "Fartminskningsmängd:",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minsta föregående hastigheter till genomsnitt:",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Max. föregående hastigheter till genomsnitt:",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Hastighet för att avsluta kast:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Tröskel för kantskrollning:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Vertikal kompensation i tröskel för kantskrollning:",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Hastighet för kantskrollning:",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minsta svep för kantskrollning:",
+  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Förhållande som krävs för horisontell skrollning:",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minsta inmatningsstorlek:",
+  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Skrollskala:",
+  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptik vid beröring:",
+  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Hindrande av omvändning aktiverat:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Beröringskänslighet:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Svepkänslighet:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Omvändningskänslighet:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Starttröskel:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Rörelsetröskel:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Omvändningströskel:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Snärtskrollning aktiverad:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Snärttröskel:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Skrollmultiplikator för snärt:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Snärthastighet:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Skrollning med svep och håll (S&H):",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H-multiplikator:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H-pulsfrekvens:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H - övre gräns:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "S&H - nedre gräns:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "S&H-haptik:",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Skrollhastighet:",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Skrollskala:",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "Horisontell dödzon:",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "Vertikal dödzon:",
   "SourceInputMode_InvertYAxis": "Invertera Y-axel:",
   "SourceInputMode_InvertXAxis": "Invertera X-axel:",
   "SourceInputMode_ButtonModeInputForce_Click": "Generera klick från:",
-  "SourceInputMode_Grab": "Ta",
+  "SourceInputMode_Grab": "Greppa",
   "SourceInputMode_CapsenseEnableThreshold": "Tröskel för aktivering av kapacitiv sensor:",
   "SourceInputMode_ValueHoldThreshold": "Hållningströskel:",
   "SourceInputMode_ValueReleaseThreshold": "Släpptröskel:",
@@ -154,7 +154,7 @@
   "BindingUI_Chord_SelectActionModalHeader": "Välj en ny åtgärd för denna genväg",
   "BindingUI_ExportBindingFile": "Exportera bindningsfil",
   "BindingUI_ReplaceDefaultFile": "Ersätt standardbindning",
-  "BindingUI_MirrorMode": "Spegelvänt läge",
+  "BindingUI_MirrorMode": "Spegelläge",
   "BindingUI_LeftHandController": "Vänster %1$s",
   "BindingUI_RightHandController": "Höger %1$s",
   "BindingUI_Binding_Name": "Namn:",
@@ -177,15 +177,15 @@
   "BindingUI_List_DeveloperSection": "Officiella bindningar",
   "BindingUI_List_LegacySection": "Standardbindningar",
   "BindingUI_List_ImportSection": "Bindningar i mappen \"<documents>/steamvr/input/import\"",
-  "BindingUI_List_PersonalSection": "Personlig",
+  "BindingUI_List_PersonalSection": "Personliga",
   "BindingUI_List_OwnedSection": "Mina delade bindningar",
   "BindingUI_List_PublicSection": "Gemenskapsbindningar",
   "BindingUI_List_Delete": "Ta bort",
   "BindingUI_List_Edit": "Redigera",
   "BindingUI_List_View": "Visa",
-  "BindingUI_List_LastUpdated": "Senast uppdaterad: ",
+  "BindingUI_List_LastUpdated": "Uppdaterades senast: ",
   "BindingUI_List_NoBindingsFound": "Inga bindningar hittades",
-  "BindingUI_List_CreateBinding": "Create New Binding",
+  "BindingUI_List_CreateBinding": "Skapa ny bindning",
   "BindingUI_Mode_Delete_Confirm": "Ta bort %1$s-läge från %2$s?",
   "BindingUI_SavePersonal": "Spara personlig bindning",
   "BindingUI_PublishToWorkshop": "Publicera till Workshop",
@@ -212,7 +212,7 @@
   "AppSelect_CurrentApp": "Nuvarande applikation",
   "AppSelect_LastRunApp": "Senast körda applikation",
   "AppSelect_RecentApp": "Senaste applikationer",
-  "AppSelect_CompositorName": "SteamVR-instrumentbräda",
+  "AppSelect_CompositorName": "SteamVR-instrumentpanel",
   "AppSelect_CoreSteamVRApps": "Grundläggande SteamVR-applikationer",
   "BindingList_PageTitle": "Ändra bindningar för %1$s",
   "BindingList_ControllerOption": "Nuvarande kontroller",
@@ -222,13 +222,13 @@
   "BindingUI_List_Developer_Binding_Description": "Dessa är officiella bindningar från spelutvecklaren",
   "BindingUI_List_Legacy_Binding_Title": "Standardbindningar för %1$s",
   "BindingUI_List_Legacy_Binding_Description": "Dessa är standardbindningarna för detta spel.",
-  "BindingUI_List_PublishedBy": "Skapad av %1$s",
+  "BindingUI_List_PublishedBy": "Skapades av %1$s",
   "BindingUI_List_Autosave": "%1$s (lokala ändringar)",
   "BindingList_TrackerEdit": "Hantera spårningsenheter",
   "BindingUI_SteamVRUnavailable": "Vänligen kör SteamVR för att fortsätta använda bindningsgränssnittet",
   "BindingUI_ErrorLoadingBindingTitle": "Bindningsfil kunde inte läsas in",
   "input_binding_load_failed": "Kunde inte läsa in inmatningsbindningar för %1$s. Vänligen välj ett annat bindningsalternativ.",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "%2$s-bindning för %1$s ställdes ej in. Välj ett bindningsalternativ från listan eller skapa ett nytt.",
   "unknown_application": "Okänd applikation",
   "InputDebugger_Title": "Inmatningsavlusare",
   "InputDebugger_Actions": "Åtgärder",
@@ -237,8 +237,8 @@
   "InputDebugger_UnknownPath": "/?",
   "InputDebugger_Unbound": "Obunden",
   "BindingUI_InputDebugger": "Inmatningsavlusare",
-  "BindingUI_WindowTitle_ControllerBinding": "Controller Binding",
-  "BindingUI_WindowTitle_ManageTrackers": "Manage Vive Trackers",
+  "BindingUI_WindowTitle_ControllerBinding": "Kontrollbindning",
+  "BindingUI_WindowTitle_ManageTrackers": "Hantera Vive-spårningsenheter",
   "ActionManifestError_ManifestParseError": "Åtgärdsmanifestet för %1$s har ett problem: \"%2$s\".",
   "ActionManifestError_FileNotFound": "Åtgärdsmanifestet för %1$s hittades inte.",
   "ActionManifestError_JSONParseError": "Åtgärdsmanifestet för %1$s innehöll ingen giltig JSON.",
@@ -249,18 +249,18 @@
   "TrackerEditor_SelectControllerRole": "Vilka händer:",
   "SaveNotice_Saving": "Sparar...",
   "SaveNotice_Uploading": "Laddar upp...",
-  "LegacySetupTab": "Set Up Legacy Actions",
-  "ShowAllAliases": "Show Hidden Actions",
-  "DeleteSimulatedAction": "Delete",
-  "AddSimulatedAction": "Add Action",
-  "UnnamedSimAction": "Unnamed Action ",
-  "ShowActionButton": "Show",
-  "HideActionButton": "Hide",
-  "LegacySetup_SimulatedActionHeader": "Simulated Actions",
-  "LegacySetup_ActionAliasesHeader": "Action Aliases",
-  "SimulatedAction_FakeTrigger": "Simulated Trigger Pull",
-  "SimulatedAction_FakeTrackpadClick": "Simulated Trackpad Click",
-  "TrackpadClickLeft": "Left Trackpad",
-  "TrackpadClickRight": "Right Trackpad",
-  "TrackpadClickNone": "Select Trackpad"
+  "LegacySetupTab": "Ställ in förgångna åtgärder",
+  "ShowAllAliases": "Visa dolda åtgärder",
+  "DeleteSimulatedAction": "Ta bort",
+  "AddSimulatedAction": "Lägg till åtgärd",
+  "UnnamedSimAction": "Namnlös åtgärd ",
+  "ShowActionButton": "Visa",
+  "HideActionButton": "Dölj",
+  "LegacySetup_SimulatedActionHeader": "Simulerade åtgärder",
+  "LegacySetup_ActionAliasesHeader": "Åtgärdsalias",
+  "SimulatedAction_FakeTrigger": "Simulerad avtryckardragning",
+  "SimulatedAction_FakeTrackpadClick": "Simulerat klick av styrplatta",
+  "TrackpadClickLeft": "Vänster styrplatta",
+  "TrackpadClickRight": "Höger styrplatta",
+  "TrackpadClickNone": "Välj styrplatta"
 }
