--- a/resources/webinterface/dashboard/localization/bindingui_tchinese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_tchinese.json
@@ -31,7 +31,7 @@
   "SourceInputMode_Scroll": "捲動",
   "SourceInputMode_Position": "位置",
   "SourceInputMode_Pull": "拉扣",
-  "SourceInputMode_Force": "力量",
+  "SourceInputMode_Force": "力度",
   "SourceInputMode_Edit": "修改",
   "SourceInputMode_AddMode": "新增",
   "SourceInputMode_Delete": "刪除",
@@ -47,7 +47,7 @@
   "SourceInputMode_TouchInitialState": "觸碰初始動作：",
   "SourceInputMode_OverlapPercent": "重疊百分比：",
   "SourceInputMode_DeadzonePercent": "死區百分比：",
-  "SourceInputMode_StickyDpad": "Persist Dpad action once activated",
+  "SourceInputMode_StickyDpad": "啟用後保持方向鍵動作",
   "SourceInputMode_LongPressDelay": "長壓延遲：",
   "SourceInputMode_DoublePressDelay": "雙擊延遲：",
   "SourceInputMode_ScrollMode": "捲動模式：",
@@ -55,44 +55,44 @@
   "SourceInputMode_ScrollMode_Discrete": "間斷（如滑鼠滾輪）",
   "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "觸控板長寬比（寬 / 高）：",
   "SourceInputMode_SmoothScroll_Multiplier": "捲動倍數：",
-  "SourceInputMode_SmoothScroll_AccelerationPower": "Acceleration Power:",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Haptic Notches Per Trackpad Height:",
-  "SourceInputMode_SmoothScroll_StartDistance": "Minimum Scroll Distance:",
-  "SourceInputMode_SmoothScroll_MinThrowVelocity": "Minimum Throw Velocity:",
-  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Maximum Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_Deceleration": "Deceleration Amount:",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Thrown Termination Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Edge Scroll Threshold:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Edge Scroll Threshold Vertical Bias:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Edge Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
-  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Ratio Needed For Horizontal Scroll:",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimum Input Magnitude:",
-  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Scroll Scale:",
-  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptic On Touch:",
-  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Reversal Supression Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Touch Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Swipe Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Reversal Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Start Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Move Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Reversal Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Flick Scrolling Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Flick Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Flick Scroll Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Flick Momentum:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Slide and Hold Scrolling:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H Pulse Rate:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H Top Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "S&H Bottom Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "S&H Haptic:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Scroll Rate:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Scroll Scale:",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "DeadZone H:",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "DeadZone V:",
+  "SourceInputMode_SmoothScroll_AccelerationPower": "加速功率：",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "觸控板高度的觸感回饋凹槽：",
+  "SourceInputMode_SmoothScroll_StartDistance": "最小捲動距離：",
+  "SourceInputMode_SmoothScroll_MinThrowVelocity": "最低投擲速度：",
+  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "最高投擲速度：",
+  "SourceInputMode_SmoothScroll_Deceleration": "減速量：",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "最少個用以計算平均的先前速度：",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "最多個用以計算平均的先前速度：",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "投擲終止速度：",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "邊緣捲動臨界值：",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "邊緣捲動臨界點垂直偏差：",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "邊緣捲動速度：",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "邊緣捲動所需最小滑動：",
+  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "水平捲動所需比率：",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "最低輸入強度：",
+  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "捲動比例：",
+  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "觸控觸感回饋：",
+  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "啟用反向抑制：",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "觸碰靈敏度：",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "滑動靈敏度：",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "反向靈敏度：",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "開始臨界值：",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "移動臨界值：",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "反向臨界值：",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "啟用掃動捲動：",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "掃動臨界值：",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "掃動捲動倍數：",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "掃動動量：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "滑行停滯捲動：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "滑行停滯倍數：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "滑行停滯脈衝率：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "滑行停滯頂邊：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "滑行停滯底邊：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "滑行停滯觸感回饋：",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "捲動速率：",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "捲動比例：",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "水平死區：",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "垂直死區：",
   "SourceInputMode_InvertYAxis": "倒轉 Y 軸：",
   "SourceInputMode_InvertXAxis": "倒轉 X 軸：",
   "SourceInputMode_ButtonModeInputForce_Click": "點擊產生來源：",
@@ -185,7 +185,7 @@
   "BindingUI_List_View": "檢視",
   "BindingUI_List_LastUpdated": "最後更新： ",
   "BindingUI_List_NoBindingsFound": "未找到配置",
-  "BindingUI_List_CreateBinding": "Create New Binding",
+  "BindingUI_List_CreateBinding": "建立新配置",
   "BindingUI_Mode_Delete_Confirm": "要刪除 %2$s 的 %1$s 模式嗎？",
   "BindingUI_SavePersonal": "儲存個人配置",
   "BindingUI_PublishToWorkshop": "發佈至工作坊",
@@ -228,7 +228,7 @@
   "BindingUI_SteamVRUnavailable": "請執行 SteamVR，以繼續使用配置介面",
   "BindingUI_ErrorLoadingBindingTitle": "無法載入配置檔案",
   "input_binding_load_failed": "無法載入 %1$s 的輸入配置。請選擇另一種配置選項。",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "未設定 %1$s 的 %2$s 配置。請從列表中選擇一個配置選項。",
   "unknown_application": "未知應用程式",
   "InputDebugger_Title": "輸入偵錯工具",
   "InputDebugger_Actions": "動作",
@@ -237,8 +237,8 @@
   "InputDebugger_UnknownPath": "/?",
   "InputDebugger_Unbound": "未綁定",
   "BindingUI_InputDebugger": "輸入偵錯工具",
-  "BindingUI_WindowTitle_ControllerBinding": "Controller Binding",
-  "BindingUI_WindowTitle_ManageTrackers": "Manage Vive Trackers",
+  "BindingUI_WindowTitle_ControllerBinding": "控制器配置",
+  "BindingUI_WindowTitle_ManageTrackers": "管理 Vive 移動定位器",
   "ActionManifestError_ManifestParseError": "%1$s 的動作資訊清單存在問題：「%2$s」。",
   "ActionManifestError_FileNotFound": "未找到 %1$s 的動作資訊清單。",
   "ActionManifestError_JSONParseError": "%1$s 的動作資訊清單中不含有效 JSON。",
@@ -249,18 +249,18 @@
   "TrackerEditor_SelectControllerRole": "哪一隻手：",
   "SaveNotice_Saving": "儲存中…",
   "SaveNotice_Uploading": "上傳中…",
-  "LegacySetupTab": "Set Up Legacy Actions",
-  "ShowAllAliases": "Show Hidden Actions",
-  "DeleteSimulatedAction": "Delete",
-  "AddSimulatedAction": "Add Action",
-  "UnnamedSimAction": "Unnamed Action ",
-  "ShowActionButton": "Show",
-  "HideActionButton": "Hide",
-  "LegacySetup_SimulatedActionHeader": "Simulated Actions",
-  "LegacySetup_ActionAliasesHeader": "Action Aliases",
-  "SimulatedAction_FakeTrigger": "Simulated Trigger Pull",
-  "SimulatedAction_FakeTrackpadClick": "Simulated Trackpad Click",
-  "TrackpadClickLeft": "Left Trackpad",
-  "TrackpadClickRight": "Right Trackpad",
-  "TrackpadClickNone": "Select Trackpad"
+  "LegacySetupTab": "設定舊版動作",
+  "ShowAllAliases": "顯示隱藏動作",
+  "DeleteSimulatedAction": "刪除",
+  "AddSimulatedAction": "新增動作",
+  "UnnamedSimAction": "未命名動作",
+  "ShowActionButton": "顯示",
+  "HideActionButton": "隱藏",
+  "LegacySetup_SimulatedActionHeader": "模擬動作",
+  "LegacySetup_ActionAliasesHeader": "動作別名",
+  "SimulatedAction_FakeTrigger": "模擬板機鍵拉動",
+  "SimulatedAction_FakeTrackpadClick": "模擬觸控板底點擊",
+  "TrackpadClickLeft": "左觸控板",
+  "TrackpadClickRight": "右觸控板",
+  "TrackpadClickNone": "選擇觸控板"
 }
