--- a/resources/webinterface/dashboard/localization/bindingui_thai.json
+++ b/resources/webinterface/dashboard/localization/bindingui_thai.json
@@ -14,7 +14,7 @@
   "SourceInputMode_dpad_touch": "สัมผัสดีแพด",
   "SourceInputMode_dpad": "ดีแพด",
   "SourceInputMode_radial": "ปุ่มเมนูแฉกรัศมี",
-  "SourceInputMode_scroll": "Scroll",
+  "SourceInputMode_scroll": "เลื่อน",
   "SourceInputMode_Force_Sensor": "เซ็นเซอร์ตรวจจับแรงกด",
   "SourceInputMode_trigger": "ทริกเกอร์",
   "SourceInputMode_Click": "คลิก",
@@ -47,50 +47,50 @@
   "SourceInputMode_TouchInitialState": "ส่งคำสั่งสัมผัสค้างไว้ตั้งแต่เริ่มต้น:",
   "SourceInputMode_OverlapPercent": "เปอร์เซ็นต์การทับซ้อน:",
   "SourceInputMode_DeadzonePercent": "เปอร์เซ็นต์เดดโซน:",
-  "SourceInputMode_StickyDpad": "Persist Dpad action once activated",
+  "SourceInputMode_StickyDpad": "ให้คงคำสั่ง Dpad ไว้เมื่อเปิดใช้งาน",
   "SourceInputMode_LongPressDelay": "หน่วงการกดยาว:",
   "SourceInputMode_DoublePressDelay": "หน่วงการกดสองครั้ง:",
-  "SourceInputMode_ScrollMode": "Scroll mode:",
-  "SourceInputMode_ScrollMode_Smooth": "Smooth (Like a trackpad)",
-  "SourceInputMode_ScrollMode_Discrete": "Discrete (Like a mouse wheel)",
-  "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "Trackpad Aspect Ratio (w/h):",
-  "SourceInputMode_SmoothScroll_Multiplier": "Scroll Multiplier:",
-  "SourceInputMode_SmoothScroll_AccelerationPower": "Acceleration Power:",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Haptic Notches Per Trackpad Height:",
-  "SourceInputMode_SmoothScroll_StartDistance": "Minimum Scroll Distance:",
-  "SourceInputMode_SmoothScroll_MinThrowVelocity": "Minimum Throw Velocity:",
-  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Maximum Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_Deceleration": "Deceleration Amount:",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Thrown Termination Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Edge Scroll Threshold:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Edge Scroll Threshold Vertical Bias:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Edge Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
-  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Ratio Needed For Horizontal Scroll:",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimum Input Magnitude:",
-  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Scroll Scale:",
-  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptic On Touch:",
-  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Reversal Supression Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Touch Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Swipe Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Reversal Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Start Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Move Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Reversal Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Flick Scrolling Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Flick Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Flick Scroll Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Flick Momentum:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Slide and Hold Scrolling:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H Pulse Rate:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H Top Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "S&H Bottom Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "S&H Haptic:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Scroll Rate:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Scroll Scale:",
+  "SourceInputMode_ScrollMode": "โหมดเลื่อน:",
+  "SourceInputMode_ScrollMode_Smooth": "ราบรื่น (เหมือนแทร็คแพด)",
+  "SourceInputMode_ScrollMode_Discrete": "แยบยล (เหมือนล้อของเมาส์)",
+  "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "อัตราส่วนแทร็คแพด (w/h):",
+  "SourceInputMode_SmoothScroll_Multiplier": "ตัวเลื่อนทวีคูณ:",
+  "SourceInputMode_SmoothScroll_AccelerationPower": "พลังเร่งความเร็ว:",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "แฮปติกนอทช์ต่อความสูงแทร็คแพด:",
+  "SourceInputMode_SmoothScroll_StartDistance": "ระยะการเลื่อนขั้นต่ำ:",
+  "SourceInputMode_SmoothScroll_MinThrowVelocity": "ความเร็วระยะขว้างขั้นต่ำ:",
+  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "ความเร็วการเลื่อนสูงสุด:",
+  "SourceInputMode_SmoothScroll_Deceleration": "จำนวนการชะลอ:",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "ความเร็วต่ำสุดก่อนหน้านี้ถึงค่าเฉลี่ย:",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "ความเร็วสูงสุดก่อนหน้านี้ถึงค่าเฉลี่ย:",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "ความเร็วของการสิ้นสุดระยะขว้าง:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "เกณฑ์การเลื่อนขอบ:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "เกณฑ์การเลื่อนขอบเส้นทแยงแนวตั้ง:",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "ความเร็วการเลื่อนขอบ:",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "การปัดขั้นต่ำสำหรับการเลื่อนขอบ:",
+  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "อัตราส่วนที่จำเป็นต้องใช้สำหรับการเลื่อนแนวนอน:",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "ขนาดอินพุตขั้นต่ำ:",
+  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "มาตราส่วนการเลื่อน:",
+  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "แฮปติกบนสัมผัส:",
+  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "เปิดใช้งานยุติการย้อนกลับ:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "ความไวสัมผัส:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "ความไวในการปัด:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "ความไวในการย้อนกลับ:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "ค่าเกณฑ์เริ่มต้น:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "ค่าเกณฑ์เคลื่อนไหว:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "ค่าเกณฑ์ย้อนกลับ:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "เปิดใช้งานการเลื่อนสะบัด:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "ค่าเกณฑ์การสะบัด:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "ตัวทวีคูณเลื่อนสะบัด:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "แรงเคลื่อนที่การสะบัด:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "การเลื่อนแบบไถลและค้างไว้:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "ตัวทวีคูณ S&H:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "อัดราจังหวะ S&H:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "ขอบด้านบนสุด S&H:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "ขอบด้านล่าง S&H:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "แฮปติก S&H:",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "อัตราการเลื่อน:",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "มาตราส่วนการเลื่อน:",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "DeadZone H:",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "DeadZone V:",
   "SourceInputMode_InvertYAxis": "กลับทิศแกน Y:",
@@ -228,7 +228,7 @@
   "BindingUI_SteamVRUnavailable": "กรุณาเปิด SteamVR เพื่อดำเนินการใช้อินเตอร์เฟสการกำหนดปุ่มต่อ",
   "BindingUI_ErrorLoadingBindingTitle": "ล้มเหลวในการโหลดไฟล์การกำหนดปุ่ม",
   "input_binding_load_failed": "ล้มเหลวในการโหลดการกำหนดปุ่มอุปกรณ์ควบคุมสำหรับ %1$s กรุณาเลือกตัวเลือกการกำหนดปุ่มอื่น",
-  "input_binding_load_failed_no_url": "%2$s binding for %1$s was not set. Please select a binding option from the list or create a new one.",
+  "input_binding_load_failed_no_url": "ยังไม่ได้ตั้งค่า %2$s กำหนดปุ่มสำหรับ %1$s กรุณาเลือกตัวเลือกการกำหนดปุ่มจากรายการหรือสร้างตัวเลือกขึ้นมาใหม่",
   "unknown_application": "แอปพลิเคชันที่ไม่รู้จัก",
   "InputDebugger_Title": "เครื่องมือดีบักอุปกรณ์ควบคุม",
   "InputDebugger_Actions": "คำสั่ง",
@@ -237,8 +237,8 @@
   "InputDebugger_UnknownPath": "/?",
   "InputDebugger_Unbound": "ยังไม่ถูกผูกไว้",
   "BindingUI_InputDebugger": "เครื่องมือดีบักอุปกรณ์ควบคุม",
-  "BindingUI_WindowTitle_ControllerBinding": "Controller Binding",
-  "BindingUI_WindowTitle_ManageTrackers": "Manage Vive Trackers",
+  "BindingUI_WindowTitle_ControllerBinding": "การกำหนดปุ่มคอนโทรลเลอร์",
+  "BindingUI_WindowTitle_ManageTrackers": "จัดการเครื่องติดตาม Vive",
   "ActionManifestError_ManifestParseError": "มานิเฟสต์คำสั่งสำหรับ %1$s มีปัญหา: \"%2$s\"",
   "ActionManifestError_FileNotFound": "ไม่พบมานิเฟสต์คำสั่งสำหรับ %1$s",
   "ActionManifestError_JSONParseError": "มานิเฟสต์คำสั่งสำหรับ %1$s ไม่มี JSON ที่ถูกต้อง",
@@ -249,17 +249,17 @@
   "TrackerEditor_SelectControllerRole": "มือข้าง:",
   "SaveNotice_Saving": "กำลังบันทึก...",
   "SaveNotice_Uploading": "กำลังอัปโหลด...",
-  "LegacySetupTab": "Set Up Legacy Actions",
-  "ShowAllAliases": "Show Hidden Actions",
+  "LegacySetupTab": "ตั้งค่าคำสั่งดั้งเดิม",
+  "ShowAllAliases": "แสดงคำสั่งที่ซ่อนไว้",
   "DeleteSimulatedAction": "ลบ",
-  "AddSimulatedAction": "Add Action",
-  "UnnamedSimAction": "Unnamed Action ",
+  "AddSimulatedAction": "เพิ่มคำสั่ง",
+  "UnnamedSimAction": "ยกเลิกชื่อคำสั่ง ",
   "ShowActionButton": "แสดง",
   "HideActionButton": "ซ่อน",
-  "LegacySetup_SimulatedActionHeader": "Simulated Actions",
-  "LegacySetup_ActionAliasesHeader": "Action Aliases",
-  "SimulatedAction_FakeTrigger": "Simulated Trigger Pull",
-  "SimulatedAction_FakeTrackpadClick": "Simulated Trackpad Click",
+  "LegacySetup_SimulatedActionHeader": "คำสั่งแบบจำลอง",
+  "LegacySetup_ActionAliasesHeader": "คำสั่งสมนาม",
+  "SimulatedAction_FakeTrigger": "เหนี่ยวทริกเกอร์แบบจำลอง",
+  "SimulatedAction_FakeTrackpadClick": "คลิกแทร็คแพดแบบจำลอง",
   "TrackpadClickLeft": "แทร็คแพดซ้าย",
   "TrackpadClickRight": "แทร็คแพดขวา",
   "TrackpadClickNone": "เลือกแทร็คแพด"
