--- a/resources/webinterface/dashboard/localization/bindingui_turkish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_turkish.json
@@ -70,14 +70,14 @@
   "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
   "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Ratio Needed For Horizontal Scroll:",
   "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimum Input Magnitude:",
-  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Scroll Scale:",
+  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Kaydırma Ölçeği:",
   "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptic On Touch:",
   "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Reversal Supression Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Touch Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Swipe Sensitivity:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Dokunma Hassaslığı:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Kaydırma Hassaslığı:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Reversal Sensitivity:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Start Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Move Threshold:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Başlatma Eşiği:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Hareket Eşiği:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Reversal Threshold:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Flick Scrolling Enabled:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Flick Threshold:",
@@ -237,8 +237,8 @@
   "InputDebugger_UnknownPath": "/?",
   "InputDebugger_Unbound": "İlişiksiz",
   "BindingUI_InputDebugger": "Girdi Hata Ayıklayıcısı",
-  "BindingUI_WindowTitle_ControllerBinding": "Controller Binding",
-  "BindingUI_WindowTitle_ManageTrackers": "Manage Vive Trackers",
+  "BindingUI_WindowTitle_ControllerBinding": "Kontrolcü Yapılandırması",
+  "BindingUI_WindowTitle_ManageTrackers": "Vive Takipçilerini Yönet",
   "ActionManifestError_ManifestParseError": "%1$s eylem bildiriminde bir sorun var: \"%2$s\".",
   "ActionManifestError_FileNotFound": "%1$s eylem bildirimi bulunamadı.",
   "ActionManifestError_JSONParseError": "%1$s eylem bildirimi, geçerli JSON içermiyordu.",
@@ -249,18 +249,18 @@
   "TrackerEditor_SelectControllerRole": "Hangi eller:",
   "SaveNotice_Saving": "Kaydediliyor...",
   "SaveNotice_Uploading": "Yükleniyor...",
-  "LegacySetupTab": "Set Up Legacy Actions",
-  "ShowAllAliases": "Show Hidden Actions",
-  "DeleteSimulatedAction": "Delete",
-  "AddSimulatedAction": "Add Action",
-  "UnnamedSimAction": "Unnamed Action ",
-  "ShowActionButton": "Show",
-  "HideActionButton": "Hide",
-  "LegacySetup_SimulatedActionHeader": "Simulated Actions",
-  "LegacySetup_ActionAliasesHeader": "Action Aliases",
-  "SimulatedAction_FakeTrigger": "Simulated Trigger Pull",
-  "SimulatedAction_FakeTrackpadClick": "Simulated Trackpad Click",
-  "TrackpadClickLeft": "Left Trackpad",
-  "TrackpadClickRight": "Right Trackpad",
-  "TrackpadClickNone": "Select Trackpad"
+  "LegacySetupTab": "Eski Eylemleri Ayarla",
+  "ShowAllAliases": "Gizli Eylemleri Göster",
+  "DeleteSimulatedAction": "Sil",
+  "AddSimulatedAction": "Eylem Ekle",
+  "UnnamedSimAction": "Adsız Eylem ",
+  "ShowActionButton": "Göster",
+  "HideActionButton": "Gizle",
+  "LegacySetup_SimulatedActionHeader": "Simüle Edilen Eylemler",
+  "LegacySetup_ActionAliasesHeader": "Eylem Takma Adları",
+  "SimulatedAction_FakeTrigger": "Simüle Edilmiş Tetik Çekmesi",
+  "SimulatedAction_FakeTrackpadClick": "Simüle Edilmiş Yön Kumandası Tıklaması",
+  "TrackpadClickLeft": "Sol Yön Kumandası",
+  "TrackpadClickRight": "Sağ Yön Kumandası",
+  "TrackpadClickNone": "Yön Kumandası Seç"
 }
