--- a/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
@@ -47,7 +47,7 @@
   "SourceInputMode_TouchInitialState": "Thời gian giữ khởi điểm của việc chạm:",
   "SourceInputMode_OverlapPercent": "Tỷ lệ trùng lặp:",
   "SourceInputMode_DeadzonePercent": "Tỷ lệ vùng chết:",
-  "SourceInputMode_StickyDpad": "Persist Dpad action once activated",
+  "SourceInputMode_StickyDpad": "Duy trì hành động Dpad sau khi kích hoạt",
   "SourceInputMode_LongPressDelay": "Độ trễ giữ lâu:",
   "SourceInputMode_DoublePressDelay": "Độ trễ giữ nhấp kép:",
   "SourceInputMode_ScrollMode": "Chế độ cuộn:",
@@ -56,20 +56,20 @@
   "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "Tỉ lệ bàn rê (ngang/dọc):",
   "SourceInputMode_SmoothScroll_Multiplier": "Hệ số độ cuộn:",
   "SourceInputMode_SmoothScroll_AccelerationPower": "Mức độ gia tốc:",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Haptic Notches Per Trackpad Height:",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Số nấc cảm biến rung trên chiều dài bàn cảm ứng:",
   "SourceInputMode_SmoothScroll_StartDistance": "Khoảng cuộn tối thiểu:",
-  "SourceInputMode_SmoothScroll_MinThrowVelocity": "Minimum Throw Velocity:",
-  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Maximum Scroll Velocity:",
+  "SourceInputMode_SmoothScroll_MinThrowVelocity": "Vận tốc vẩy tối thiểu:",
+  "SourceInputMode_SmoothScroll_MaxScrollVelocity": "Vận tốc cuộn tối đa:",
   "SourceInputMode_SmoothScroll_Deceleration": "Mức độ giảm tốc:",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximum Previous Velocities To Average:",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Số mẫu vận tốc tối thiểu trước đó để tính trung bình:",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Số mẫu vận tốc tối đa trước đó để tính trung bình:",
   "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Vận tốc ném tối thiểu trước khi dừng:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Edge Scroll Threshold:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Edge Scroll Threshold Vertical Bias:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Edge Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
-  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Ratio Needed For Horizontal Scroll:",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimum Input Magnitude:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Giá trị ngưỡng cuộn cạnh:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Độ lệch dọc ngưỡng cuộn cạnh:",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Vận tốc cuộn cạnh:",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Vuốt tối thiểu để cuộn cạnh:",
+  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Tỷ lệ cần để cuộn ngang:",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Độ lớn đầu vào tối thiểu:",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Cấp số cuộn:",
   "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Phản hồi rung khi chạm:",
   "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Giá trị ngưỡng giảm đảo ngược:",
@@ -142,7 +142,7 @@
   "TrackerRole_Chest": "Ngực",
   "TrackerRole_Camera": "Camera",
   "TrackerRole_Keyboard": "Bàn phím",
-  "TrackedControllerRole_Invalid": "Bất kỳ tay nào",
+  "TrackedControllerRole_Invalid": "Tay bất kỳ",
   "TrackedControllerRole_LeftHand": "Tay trái",
   "TrackedControllerRole_RightHand": "Tay phải",
   "BindingUI_EditChords": "Sửa hợp phím",
@@ -154,7 +154,7 @@
   "BindingUI_Chord_SelectActionModalHeader": "Chọn hành động cho hợp phím này",
   "BindingUI_ExportBindingFile": "Xuất tệp cách gán phím",
   "BindingUI_ReplaceDefaultFile": "Thay cách gán phím mặc định",
-  "BindingUI_MirrorMode": "Chế độ tương phản",
+  "BindingUI_MirrorMode": "Chế độ phản chiếu",
   "BindingUI_LeftHandController": "%1$s trái",
   "BindingUI_RightHandController": "%1$s phải",
   "BindingUI_Binding_Name": "Tên:",
@@ -163,14 +163,14 @@
   "BindingUI_Save_Public": "Chia sẻ cách gán phím này tới người dùng khác.",
   "BindingUI_Save_Export": "Lưu cách gán phím vào documents/steamvr/input/exports",
   "BindingUI_Save_ReplaceDefault": "Lưu đè lên cách gán phím mặc định cho ứng dụng này",
-  "BindingUI_Save_AddNewDefault": "Loại tay cầm sẽ được thêm vào tệp biểu hiện hành động.",
-  "BindingUI_EditPageTitle": "Sửa %1$s",
+  "BindingUI_Save_AddNewDefault": "Loại tay cầm này sẽ được thêm vào tệp kê khai hành động.",
+  "BindingUI_EditPageTitle": "Đang sửa %1$s",
   "BindingUI_ViewPageTitle": "Đang xem %1$s",
   "BindingUI_PageSubTitle": "Dùng %3$s cho %1$s trong %2$s",
-  "BindingUI_BindingType_autosave": "cách gán đã sửa lưu tại máy",
+  "BindingUI_BindingType_autosave": "bản cục bộ qua chỉnh sửa",
   "BindingUI_BindingType_personal": "cách gán phím cá nhân",
   "BindingUI_BindingType_developer": "cách gán phím của nhà phát triển",
-  "BindingUI_BindingType_developer_legacy": "cách gán phím truyền thống mặc định",
+  "BindingUI_BindingType_developer_legacy": "cách gán phím truyền thống",
   "BindingUI_BindingType_local_file": "cách gán lưu tại máy",
   "BindingUI_BindingType_public": "cách gán công cộng",
   "BindingUI_List_CurrentSection": "Cách gán hiện tại",
@@ -178,7 +178,7 @@
   "BindingUI_List_LegacySection": "Cách gán mặc định",
   "BindingUI_List_ImportSection": "Cách gán có trong thư mục \"<documents>/steamvr/input/import\"",
   "BindingUI_List_PersonalSection": "Cá nhân",
-  "BindingUI_List_OwnedSection": "Cách gán tôi đã chia sẻ",
+  "BindingUI_List_OwnedSection": "Cách gán đã chia sẻ của tôi",
   "BindingUI_List_PublicSection": "Cách gán của cộng đồng",
   "BindingUI_List_Delete": "Xóa",
   "BindingUI_List_Edit": "Sửa",
@@ -212,11 +212,11 @@
   "AppSelect_CurrentApp": "Ứng dụng hiện tại",
   "AppSelect_LastRunApp": "Ứng dụng vừa dùng",
   "AppSelect_RecentApp": "Ứng dụng gần đây",
-  "AppSelect_CompositorName": "Bảng điều khiển SteamVR",
+  "AppSelect_CompositorName": "Trang tổng quan SteamVR",
   "AppSelect_CoreSteamVRApps": "Ứng dụng SteamVR chính",
   "BindingList_PageTitle": "Sửa cách gán cho %1$s",
   "BindingList_ControllerOption": "Bộ điều khiển hiện tại",
-  "BindingUI_List_Delete_Confirm": "Xóa vĩnh viễn cách gán cho %1$s?",
+  "BindingUI_List_Delete_Confirm": "Xóa vĩnh viễn cách gán %1$s?",
   "BindingUI_List_Select_Confirm": "Bạn có các thay đổi cách gán phím chưa được lưu. Bạn có muốn bỏ các thay đổi hay lưu chúng dưới dạng cách gán cá nhân trước khi dùng nó?",
   "BindingUI_List_Developer_Binding_Title": "Cách gán phím chính thức cho %1$s",
   "BindingUI_List_Developer_Binding_Description": "Đây là cách gán phím chính thức được phát hành bởi nhà phát triển cho trò chơi này",
@@ -240,8 +240,8 @@
   "BindingUI_WindowTitle_ControllerBinding": "Gán nút tay cầm",
   "BindingUI_WindowTitle_ManageTrackers": "Quản lý máy theo dõi Vive",
   "ActionManifestError_ManifestParseError": "Biểu hiện hành động cho %1$s có một vấn đề: \"%2$s\".",
-  "ActionManifestError_FileNotFound": "Không tìm thấy biểu hiện hành động cho %1$s.",
-  "ActionManifestError_JSONParseError": "Biểu hiện hành động cho %1$s không có JSON hợp lệ.",
+  "ActionManifestError_FileNotFound": "Không tìm thấy bản kê hành động cho %1$s.",
+  "ActionManifestError_JSONParseError": "Bản kê hành động cho %1$s không có JSON hợp lệ.",
   "ActionManifestError_Path": "Đường dẫn tệp:",
   "TrackerEditor_Title": "Quản lý máy theo dõi",
   "TrackerEditor_BuzzTracker": "Nhận diện máy theo dõi",
