--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -59,12 +59,12 @@
 	"Advanced_SaveFrameDataNow": "Framegegevens opslaan",
 	"Explanation_DisableEnhancedPowerManagement": "Schakelt het geavanceerd energiebeheer van Windows uit voor SteamVR-USB-apparaten wanneer je problemen met volgen ondervindt of draadloze controllers niet kunt koppelen. ",
 	"Explanation_QuickCalibrate": "Stel je kamerinstelling snel opnieuw in. Voor staande en kamervullende VR worden nieuwe grenzen gecentreerd op je headset op de vloer in het midden van de ruimte.",
-	"Explanation_RebootVive": "Headset resetten - dit kan USB-gerelateerde headsetproblemen oplossen.",
+	"Explanation_RebootVive": "Headset opnieuw instellen - dit kan USB-gerelateerde headsetproblemen oplossen.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Verwijder alle USB-apparaten die aan SteamVR gerelateerd zijn van dit systeem om de stuurprogramma's opnieuw te installeren.",
 	"Explanation_ResetDismissableWarnings": "Tijdelijke waarschuwingen worden opnieuw ingesteld en zullen weer worden getoond wanneer dat nodig is.",
 	"MenuAction_DisableEnhancedPowerManagement": "Energiebeheer uitschakelen",
 	"MenuAction_QuickCalibrate": "Snel kalibreren",
-	"MenuAction_RebootVive": "Headset resetten",
+	"MenuAction_RebootVive": "Headset opnieuw instellen",
 	"MenuAction_RecordTrackingData": "Volgdata opnemen",
 	"MenuAction_RemoveAllSteamVRUSBDevices": "Alle SteamVR-USB-apparaten verwijderen",
 	"MenuAction_ResetDismissableWarnings": "Waarschuwingen herstellen",
@@ -77,7 +77,7 @@
 	"Settings_ArcadeMode": "Arcade-modus inschakelen",
 	"Settings_CheckForSteam": "Op Steam controleren",
 	"Settings_DebugInputBindings": "Debugopties in de gebruikersinterface voor invoerconfiguratie inschakelen",
-	"Settings_DoNotFadeToGrid": "Niet naar raster faden als de app hangt",
+	"Settings_DoNotFadeToGrid": "Niet naar raster vervagen als de app hangt",
 	"Settings_EnableDashboard": "VR-dashboard inschakelen",
 	"Settings_HomeAppCheck": "SteamVR Home gebruiken",
 	"Settings_HomeAppDesc": "Geniet van virtuele omgevingen, sociale functies en meer.",
