--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -48,7 +48,7 @@
 	"Settings_SectionTitle_Bluetooth": "Bluetooth",
 	"Settings_SectionTitle_Power": "Energie",
 	"Settings_SectionTitle_Internal": "Intern",
-	"Settings_SectionTitle_Home": "Start",
+	"Settings_SectionTitle_Home": "SteamVR Home",
 	"Settings_SectionTitle_Chaperone": "Chaperone",
 	"Settings_SectionTitle_BaseStation": "Basisstationen",
 	"Advanced_AllowSavingOfTimingInfo": "Speichern von Synchronisierungsdaten zulassen",
