--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -2,7 +2,7 @@
 	"language": "italian",
 	"VRMonitor_Nav_Overview": "Panoramica",
 	"VRMonitor_Nav_Settings": "Impostazioni",
-	"VRMonitor_Nav_Help": "Guida",
+	"VRMonitor_Nav_Help": "Aiuto",
 	"VRMonitor_Nav_Developer": "Sviluppatore",
 	"VRMonitor_Overview_SystemStatus_Title": "Stato del sistema",
 	"VRMonitor_Overview_DeviceStatus_Title": "Stato del dispositivo",
@@ -11,17 +11,17 @@
 	"VRMonitor_Overview_QuickLinks_Knock": "Toc, toc",
 	"VRMonitor_Overview_QuickLinks_Knock_Desc": "Attira l'attenzione dell'utente con il visore",
 	"VRMonitor_Overview_QuickLinks_RoomSetup": "Configurazione della stanza",
-	"VRMonitor_Overview_QuickLinks_RoomSetup_Desc": "Configura i bordi Chaperone",
+	"VRMonitor_Overview_QuickLinks_RoomSetup_Desc": "Configura i bordi chaperone",
 	"VRMonitor_Overview_QuickLinks_Tutorial": "Tutorial di SteamVR",
-	"VRMonitor_Overview_QuickLinks_Tutorial_Desc": "Impara ad usare il tuo visore VR",
+	"VRMonitor_Overview_QuickLinks_Tutorial_Desc": "Impara a usare il tuo visore VR",
 	"SystemStatus_FrameRate_Good": "Frequenza di fotogrammi buona",
-	"SystemStatus_FrameRate_MissedFrames": "Fotogrammi persi",
+	"SystemStatus_FrameRate_MissedFrames": "Fotogrammi mancanti",
 	"SystemStatus_FrameRate_now": "adesso",
 	"SystemStatus_FrameRate_7sec": "7 sec",
 	"SystemStatus_FrameRate_15sec": "15 sec",
-	"VRDevFiles_PathHandles": "Puntatori dei percorsi",
+	"VRDevFiles_PathHandles": "Gestione dei percorsi",
 	"VRDevFiles_JSON": "JSON",
-	"VRDevFiles_Logging": "Registrazione",
+	"VRDevFiles_Logging": "Registro",
 	"VRDevFiles_Configuration": "Configurazione",
 	"VRDevFiles_USBDevices": "Dispositivi USB",
 	"VRDevConsole_ShowLogName": "Mostra il nome del registro",
@@ -39,7 +39,7 @@
 	"Settings_Audio_AudioMirrorUnsupported": "Questa piattaforma non supporta la duplicazione dell'audio",
 	"Settings_Audio_NoMirror": "(Non duplicare)",
 	"Settings_SectionTitle_Advanced": "Avanzate",
-	"Settings_SectionTitle_Developer": "Sviluppatori",
+	"Settings_SectionTitle_Developer": "Sviluppatore",
 	"Settings_SectionTitle_General": "Generale",
 	"Settings_SectionTitle_Applications": "Applicazioni",
 	"Settings_SectionTitle_Audio": "Audio",
@@ -58,7 +58,7 @@
 	"Advanced_PerfGraphInHMD": "Visualizza il grafico delle prestazioni della GPU nel visore",
 	"Advanced_SaveFrameDataNow": "Salva i dati dei fotogrammi",
 	"Explanation_DisableEnhancedPowerManagement": "Se osservi strane perdite di tracciamento o non riesci ad associare i controller wireless, disabilita il risparmio energetico avanzato di Windows per i dispositivi USB di SteamVR. ",
-	"Explanation_QuickCalibrate": "Reimposta velocemente la Configurazione Stanza. Per le impostazioni In piedi e VR a intera stanza verranno centrati nuovi bordi nel visore sul pavimento al centro del tuo spazio.",
+	"Explanation_QuickCalibrate": "Reimposta velocemente la configurazione della stanza. Per le impostazioni In piedi e VR a intera stanza verranno centrati nuovi bordi nel visore sul pavimento al centro del tuo spazio.",
 	"Explanation_RebootVive": "Resetta il tuo visore: l'operazione potrebbe risolvere i problemi del visore legati all'USB.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Per reinstallare i driver, rimuovi dal sistema tutti i dispositivi USB collegati a SteamVR.",
 	"Explanation_ResetDismissableWarnings": "Gli avvisi temporanei vengono reimpostati e verranno visualizzati nuovamente, se necessario.",
@@ -86,7 +86,7 @@
 	"Settings_LockedModeDesc": "Consenti la riproduzione sul visore mentre il computer è bloccato.",
 	"Settings_MediumSpace": "Spazio medio",
 	"Settings_NightModeCheck": "Modalità notturna",
-	"Settings_NightModeDesc": "Riduce la luminosità del visore fino alle 5 di mattina (oppure fino al riavvio di SteamVR).",
+	"Settings_NightModeDesc": "Riduci la luminosità del visore fino alle 5 del mattino (oppure fino al riavvio di SteamVR).",
 	"Settings_NotificationDoNotDisturb_Info": "Quando la modalità Non Disturbare è abilitata, le notifiche in arrivo vengono soppresse.",
 	"Settings_NotificationDoNotDisturb_Text": "Non disturbare",
 	"Settings_PauseOnStandby": "Sospendi il rendering mentre il visore è inattivo",
@@ -96,14 +96,14 @@
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
 	"Settings_StatusWindowAlwaysOnTop_Text": "Sempre in primo piano",
 	"Settings_StatusWindowMinimizeToTray_Text": "La finestra di stato di SteamVR verrà minimizzata nell'area di notifica",
-	"Settings_SuppressWarnings_Text": "Elimina gli avvisi quando StramVR è minimizzato",
+	"Settings_SuppressWarnings_Text": "Non mostrare avvisi e notifiche quando StramVR è minimizzato",
 	"StatusCheckInterval_Never": "Mai",
 	"StatusCheckInterval_Normal": "Normale (1 sec)",
 	"StatusCheckInterval_Often": "Spesso (100 msec)",
 	"StatusCheckInterval_Seldom": "Raramente (5 sec)",
 	"Settings_KnockKnock_Button": "Toc toc",
 	"Settings_KnockKnock_Desc": "Permette a chi non è nella VR di richiamare l'attenzione di chi indossa il visore",
-	"Settings_CreateSystemReport_Button": "Crea un rapporto del sistema",
+	"Settings_CreateSystemReport_Button": "Crea un rapporto di sistema",
 	"Settings_ViewLogs_Button": "Mostra registri",
 	"Settings_Chaperone_Style": "Stile chaperone",
 	"Settings_Chaperone_Style_0": "Principiante",
@@ -111,13 +111,13 @@
 	"Settings_Chaperone_Style_2": "Quadrati",
 	"Settings_Chaperone_Style_3": "Avanzato",
 	"Settings_Chaperone_Style_4": "Solo pavimento",
-	"Settings_Video_AppResFooter": "Con questa impostazione, la velocità di rendering per ciascun occhio è di %1$s",
+	"Settings_Video_AppResFooter": "L'impostazione attuale della velocità di rendering per ciascun occhio è di %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Motion smoothing",
-	"Settings_Advanced_MotionSmoothing_Description": "Sintetizza nuovi frotogrammi per mantenere una buona epserienza utente quando l'applicazione in esecuzione non riesce a tenere il passo.",
+	"Settings_Advanced_MotionSmoothing_Description": "Sintetizza nuovi frotogrammi per mantenere una buona esperienza utente quando l'applicazione in esecuzione non riesce a tenere il passo.",
 	"Settings_Advanced_MotionSmoothing": "Attiva motion smoothing",
 	"Settings_Advanced_MotionSmoothing_Disabled": "Il motion smoothing richiede il supporto alla riproiezione asincrona.",
 	"Settings_Advanced_Supersampling_Header": "Risoluzione dell'applicazione",
-	"Settings_Advanced_Supersampling_Warning": "L'impostazione qui sotto sostituisce quelle predefinite e interessa tutte le applicazioni. Per modificare la risoluzione di un'applicazione specifica, visita le impostazioni delle applicazioni.",
+	"Settings_Advanced_Supersampling_Warning": "L'impostazione qui sotto sostituisce quella predefinita e modifica tutte le applicazioni. Per modificare la risoluzione di un'applicazione specifica, visita le impostazioni delle applicazioni.",
 	"Settings_Advanced_SupersamplingManualOverride": "Abilita le modifiche della risoluzione",
 	"Explanation_Supersampling_Header": "SteamVR imposta automaticamente la risoluzione dell'applicazione in base alle prestazioni della tua GPU.",
 	"Explanation_Supersampling": "*Alcune applicazioni potrebbero dover essere riavviate perché le nuove impostazioni abbiano effetto.",
@@ -143,10 +143,10 @@
 	"Settings_Camera_EnableCamera": "Attiva la telecamera",
 	"Settings_Camera_AllowCameraInDashboard": "Mostra la telecamera nella dashboard",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Attiva una finestra della telecamera associata al tuo controller quando la Dashboard è attiva.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Usa la fotocamera per migliorare i bordi chaperone",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Usa la telecamera per migliorare i bordi chaperone",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Abilita Vista stanza (doppio clic del pulsante System)",
-	"Settings_Camera_AllowCameraForRoomView_Desc": "Accedi a Vista stanza in qualunque momento premendo due volte il pulsante System",
+	"Settings_Camera_AllowCameraForRoomView": "Abilita Vista stanza (doppio clic del pulsante Sistema)",
+	"Settings_Camera_AllowCameraForRoomView_Desc": "Accedi a Vista stanza in qualunque momento premendo due volte il pulsante Sistema",
 	"Settings_Camera_Compatibility": "Frequenza della telecamera",
 	"Settings_Camera_CompatibilityExplanation": "Se osservi una perdita di monitoraggio imposta una frequenza della telecamera più bassa, disabilita la telecamera o prova con una porta USB diversa.",
 	"Advanced_Appearance": "Aspetto",
@@ -159,7 +159,7 @@
 	"Settings_Appearance_DomeCameraRadius": "Raggio della cupola",
 	"Settings_Appearance_DomeCameraRadiusDesc": "Modifica la dimensione della cupola.",
 	"Settings_Appearance_PlayAreaColor": "Area di gioco",
-	"Settings_Appearance_PlayAreaColorDesc": "Regola lo stile alla tua area di gioco. Apparirà durante il caricamento dei giochi o se hai disabilitato SteamVR Home Beta.",
+	"Settings_Appearance_PlayAreaColorDesc": "Regola lo stile della tua area di gioco. Apparirà durante il caricamento dei giochi o se hai disabilitato SteamVR Home Beta.",
 	"Settings_Appearance_MoreEnvironments": "Ottieni altri ambienti di SteamVR Home",
 	"Settings_Power_ReturnToWatchdogTimeout": "Esci da SteamVR dopo",
 	"Settings_Power_TurnOffScreensTimeout": "Spegni gli schermi dopo",
