--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -29,42 +29,42 @@
 	"VRMonitor_DevNav_Console": "コンソール",
 	"VRMonitor_DevNav_RoomOverview": "ルーム概観",
 	"VRMonitor_DevNav_Files": "ファイル",
-	"Settings_Audio_On": "When using SteamVR...",
-	"Settings_Audio_AudioPlay": "Set playback device to",
-	"Settings_Audio_AudioRecord": "Set record device to",
-	"Settings_Audio_Off": "When SteamVR is exited...",
-	"Settings_Audio_HDMIGain": "Enable Gain reduction on Vive HDMI Audio",
-	"Settings_Audio_LeaveAlone": "(Do not change device)",
+	"Settings_Audio_On": "SteamVR使用時...",
+	"Settings_Audio_AudioPlay": "再生デバイスを設定：",
+	"Settings_Audio_AudioRecord": "録音デバイスの設定：",
+	"Settings_Audio_Off": "SteamVRを終了時...",
+	"Settings_Audio_HDMIGain": "Vive HDMIオーディオのゲインリダクションを有効化",
+	"Settings_Audio_LeaveAlone": "（デバイスを変更しない）",
 	"Settings_Audio_AudioMirrorPlay": "デバイスにオーディオをミラーする",
 	"Settings_Audio_AudioMirrorUnsupported": "このプラットフォームは音声のミラーリングをサポートしていません",
-	"Settings_Audio_NoMirror": "(Do not mirror)",
-	"Settings_SectionTitle_Advanced": "Advanced",
-	"Settings_SectionTitle_Developer": "Developer",
-	"Settings_SectionTitle_General": "General",
-	"Settings_SectionTitle_Applications": "Applications",
-	"Settings_SectionTitle_Audio": "Audio",
-	"Settings_SectionTitle_Video": "Video",
-	"Settings_SectionTitle_Camera": "Camera",
-	"Settings_SectionTitle_Bluetooth": "Bluetooth",
-	"Settings_SectionTitle_Power": "Power",
-	"Settings_SectionTitle_Internal": "Internal",
-	"Settings_SectionTitle_Home": "Home",
-	"Settings_SectionTitle_Chaperone": "Chaperone",
-	"Settings_SectionTitle_BaseStation": "Base Stations",
-	"Advanced_AllowSavingOfTimingInfo": "Allow saving of timing info",
-	"Advanced_AutoSaveTimingInfoOnExit": "Auto-save timing info on exit",
-	"Settings_EnableWebHelperDebugger": "Enable web helper debugger",
+	"Settings_Audio_NoMirror": "（ミラーしない）",
+	"Settings_SectionTitle_Advanced": "詳細",
+	"Settings_SectionTitle_Developer": "開発者",
+	"Settings_SectionTitle_General": "一般",
+	"Settings_SectionTitle_Applications": "アプリケーション",
+	"Settings_SectionTitle_Audio": "オーディオ",
+	"Settings_SectionTitle_Video": "動画",
+	"Settings_SectionTitle_Camera": "カメラ",
+	"Settings_SectionTitle_Bluetooth": "ブルートゥース",
+	"Settings_SectionTitle_Power": "電源",
+	"Settings_SectionTitle_Internal": "内部",
+	"Settings_SectionTitle_Home": "ホーム",
+	"Settings_SectionTitle_Chaperone": "シャペロン",
+	"Settings_SectionTitle_BaseStation": "ベースステーション",
+	"Advanced_AllowSavingOfTimingInfo": "タイミング情報の保存を許可",
+	"Advanced_AutoSaveTimingInfoOnExit": "終了時にタイミング情報を自動で保存",
+	"Settings_EnableWebHelperDebugger": "Webヘルパーデバッガーを有効にする",
 	"Settings_EnableWebHelperDebuggerDesc": "Chromium開発ツールとデバッガーを埋め込みChromiumページにアタッチするために、デバッグサーバーを有効にします。SteamVRの再起動が必要です。",
 	"Advanced_PerfGraphInHMD": "ヘッドセットにGPUパフォーマンスのグラフを表示",
-	"Advanced_SaveFrameDataNow": "Save Frame Data",
-	"Explanation_DisableEnhancedPowerManagement": "Disable Windows Enhanced Power Management for SteamVR USB Devices if you experience a mysterious loss of tracking or an inability to pair wireless controllers. ",
+	"Advanced_SaveFrameDataNow": "フレームデータを保存",
+	"Explanation_DisableEnhancedPowerManagement": "原因不明のトラック停止やワイヤレスコントローラのペアリング失敗などの問題がある場合は、SteamVR USBデバイスに関するWindowsの高度な電源管理を無効化してください。 ",
 	"Explanation_QuickCalibrate": "ルームセットアップのクイックリセットを行います。立位およびルームスケールVRの新しい境界は、空間の床の中心に置かれたヘッドセットを中心とします。",
-	"Explanation_RebootVive": "Reset your headset - this may fix USB related headset issues.",
+	"Explanation_RebootVive": "ヘッドセットをリセットします - USBに関係するヘッドセットの問題が解決する可能性があります。",
 	"Explanation_RemoveAllSteamVRUSBDevices": "ドライバーを再インストールするため、SteamVR関連の全USBデバイスをこのシステムから取り外してください。",
 	"Explanation_ResetDismissableWarnings": "一時的な警告がリセットされました。今後は必要な際に表示されます。",
 	"MenuAction_DisableEnhancedPowerManagement": "電源管理を無効化",
 	"MenuAction_QuickCalibrate": "クイックキャリブレーション",
-	"MenuAction_RebootVive": "Reset headset",
+	"MenuAction_RebootVive": "ヘッドセットをリセット",
 	"MenuAction_RecordTrackingData": "追跡データを記録",
 	"MenuAction_RemoveAllSteamVRUSBDevices": "SteamVRの全USBデバイスを削除",
 	"MenuAction_ResetDismissableWarnings": "警告をリセット",
@@ -77,16 +77,16 @@
 	"Settings_ArcadeMode": "アーケードモードを有効化",
 	"Settings_CheckForSteam": "Steamを確認",
 	"Settings_DebugInputBindings": "入力バインドユーザーインターフェイスのデバッグオプションを有効化",
-	"Settings_DoNotFadeToGrid": "Do not fade to grid when app hangs",
+	"Settings_DoNotFadeToGrid": "アプリのハング時にグリッドにフェードアウトしない",
 	"Settings_EnableDashboard": "VRダッシュボードを有効化",
-	"Settings_HomeAppCheck": "Use SteamVR Home",
-	"Settings_HomeAppDesc": "Enjoy virtual environments, social features, and more.",
+	"Settings_HomeAppCheck": "SteamVRホームを使用",
+	"Settings_HomeAppDesc": "仮想環境やソーシャル機能他、お楽しみください。",
 	"Settings_LargeSpace": "大きなスペース",
 	"Settings_LockedModeCheck": "ロックモード",
-	"Settings_LockedModeDesc": "Allow rendering to headset while computer is locked.",
+	"Settings_LockedModeDesc": "コンピューターがロックされている状態でヘッドセットへのレンダリングを許可する。",
 	"Settings_MediumSpace": "中くらいのスペース",
 	"Settings_NightModeCheck": "ナイトモード",
-	"Settings_NightModeDesc": "Dim the headset until 5:00 AM (or until SteamVR is restarted).",
+	"Settings_NightModeDesc": "ヘッドセットを午前5:00まで（またはSteamVRが再起動されるまで）減光します。",
 	"Settings_NotificationDoNotDisturb_Info": "通知拒否が有効化されていると、着信通知は抑制されます。",
 	"Settings_NotificationDoNotDisturb_Text": "通知拒否",
 	"Settings_PauseOnStandby": "ヘッドセットがアイドル状態の時にレンダリングを一時停止する",
@@ -94,35 +94,35 @@
 	"Settings_SmallSpace": "小さいスペース",
 	"Settings_StartSteamVROnAppLaunch": "アプリケーション立ち上げ時にSteamVRを起動",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "Always on Top",
+	"Settings_StatusWindowAlwaysOnTop_Text": "常にトップに表示",
 	"Settings_StatusWindowMinimizeToTray_Text": "最小化時にSteamVRステータスはシステムトレイに最小化されます",
-	"Settings_SuppressWarnings_Text": "Suppress warnings and alerts when SteamVR Status is minimized",
+	"Settings_SuppressWarnings_Text": "SteamVRステータスが最小化されている時は、警告やアラートを表示しない",
 	"StatusCheckInterval_Never": "なし",
 	"StatusCheckInterval_Normal": "普通（1秒）",
 	"StatusCheckInterval_Often": "頻繁（100ミリ秒）",
 	"StatusCheckInterval_Seldom": "時々（5秒）",
-	"Settings_KnockKnock_Button": "Knock Knock",
-	"Settings_KnockKnock_Desc": "This allows people outside of VR to get the headset user's attention",
-	"Settings_CreateSystemReport_Button": "Create System Report",
-	"Settings_ViewLogs_Button": "View Logs",
+	"Settings_KnockKnock_Button": "トントン",
+	"Settings_KnockKnock_Desc": "これにより VR 外の人がヘッドセットをつけているユーザの注意を引くことができます",
+	"Settings_CreateSystemReport_Button": "システムレポートを作成",
+	"Settings_ViewLogs_Button": "ログを表示",
 	"Settings_Chaperone_Style": "シャペロンスタイル",
 	"Settings_Chaperone_Style_0": "初心者",
 	"Settings_Chaperone_Style_1": "中級者",
 	"Settings_Chaperone_Style_2": "正方形",
 	"Settings_Chaperone_Style_3": "詳細",
-	"Settings_Chaperone_Style_4": "Floor only",
-	"Settings_Video_AppResFooter": "The current setting renders each eye at %1$s",
+	"Settings_Chaperone_Style_4": "床のみ",
+	"Settings_Video_AppResFooter": "現在の設定は、片目あたり%1$sでレンダリングします",
 	"Settings_Advanced_MotionSmoothing_Header": "モーションスムージング",
-	"Settings_Advanced_MotionSmoothing_Description": "Synthesizes new frames to maintain a good experience when the running application cannot keep up.",
-	"Settings_Advanced_MotionSmoothing": "Enable motion smoothing",
+	"Settings_Advanced_MotionSmoothing_Description": "実行中のアプリケーションの処理が追い付かない場合に、良好な体験を維持するために新しいフレームを合成します。",
+	"Settings_Advanced_MotionSmoothing": "モーションスムージングを有効化",
 	"Settings_Advanced_MotionSmoothing_Disabled": "モーションスムージングには、非同期再投影のサポートが必要です。",
 	"Settings_Advanced_Supersampling_Header": "アプリケーション解像度",
-	"Settings_Advanced_Supersampling_Warning": "The setting below overrides the automated setting and affects all applications. To change the resolution for a specific application, visit Applications Settings.",
-	"Settings_Advanced_SupersamplingManualOverride": "Enable resolution adjustments",
+	"Settings_Advanced_Supersampling_Warning": "以下の設定は自動設定をオーバーライドし、すべてのアプリケーションに影響します。特定のアプリケーションの解像度は、アプリケーション設定で変更してください。",
+	"Settings_Advanced_SupersamplingManualOverride": "解像度の調整を有効化",
 	"Explanation_Supersampling_Header": "SteamVRはGPUの性能を基にアプリケーション解像度を自動的に設定します。",
 	"Explanation_Supersampling": "*一部のアプリケーションでは、設定を有効にするために再起動が必要な場合があります。",
 	"Explanation_SupersamplingFiltering": "スーパーサンプリングのフィルタオプション：",
-	"Settings_PerApplication_Header": "Create unique rendering settings for specific applications",
+	"Settings_PerApplication_Header": "特定のアプリケーション用に独自のレンダリング設定を作成",
 	"Settings_PerApplication_ChooseApplication": "アプリケーションを選択",
 	"Settings_PerApplication_AppResTitle": " ",
 	"Settings_PerApplication_AppResHeader": "この設定は、左の「ビデオ」タブに表示される、現在のグローバルアプリケーション解像度設定に乗算されます。設定を有効にするには、アプリケーションを再起動する必要があります。（デフォルトは 100%）",
@@ -133,42 +133,42 @@
 	"Settings_PerApplication_CustomSuffix": "（カスタム）",
 	"Settings_PerApplication_MotionSmoothing_Header": "モーションスムージング",
 	"Settings_PerApplication_MotionSmoothing_Description": "このアプリケーションに対するモーションスムージングのグローバル設定をオーバーライドするには、以下のチェックボックスを使用してください。（モーションスムージングのグローバル設定は、<font color=#eeeeee>%1</font>です）",
-	"Settings_PerApplication_MotionSmoothing_Global": "Use global setting",
-	"Settings_PerApplication_MotionSmoothing_On": "Enabled",
-	"Settings_PerApplication_MotionSmoothing_Off": "Disabled",
-	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "Force Always-On",
-	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Warning: Application will run at half framerate",
-	"Settings_PerApplication_MotionSmoothing_Checkbox": "Enable motion smoothing for this application",
+	"Settings_PerApplication_MotionSmoothing_Global": "グローバル設定を使用",
+	"Settings_PerApplication_MotionSmoothing_On": "有効",
+	"Settings_PerApplication_MotionSmoothing_Off": "無効",
+	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "常にオンに強制設定",
+	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "警告：アプリケーションは半分のフレームレートで実行されます。",
+	"Settings_PerApplication_MotionSmoothing_Checkbox": "このアプリケーションに対してモーションスムージングを有効にする",
 	"Settings_MimeTypes_Pancake_Header": "2Dアプリケーションを起動するアプリケーションを選択",
 	"Settings_Camera_EnableCamera": "カメラを有効にする",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera in Dashboard",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Use camera to enhance chaperone bounds",
+	"Settings_Camera_AllowCameraInDashboard": "ダッシュボードにカメラを表示",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "ダッシュボードが表示される時に、コントローラにアタッチされたカメラウィンドウを開く。",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "シャペロン境界の拡張にカメラを使用",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Enable Room View (System button double-click)",
-	"Settings_Camera_AllowCameraForRoomView_Desc": "Access Room View at any time by double clicking the System button",
-	"Settings_Camera_Compatibility": "Camera rate",
+	"Settings_Camera_AllowCameraForRoomView": "ルームビュー（システムボタンをダブルクリック）を有効化",
+	"Settings_Camera_AllowCameraForRoomView_Desc": "システムボタンの２回押しでいつでもルームビューにアクセス",
+	"Settings_Camera_Compatibility": "カメラレート",
 	"Settings_Camera_CompatibilityExplanation": "トラッキング損失が発生した場合は、カメラのレートを下げる、カメラを無効にする、または他のUSBポートを試してください。",
 	"Advanced_Appearance": "外観",
-	"Settings_Appearance_Background": "Background",
-	"Settings_Appearance_BackgroundDesc": "Pick a background for the default space",
+	"Settings_Appearance_Background": "背景",
+	"Settings_Appearance_BackgroundDesc": "デフォルト空間用に背景を選択",
 	"Settings_Appearance_UseDomeProjection": "ドーム投影を使用",
 	"Settings_Appearance_UseDomeProjectionDesc": "背景の投影スタイルを変更します。特定の背景では没入感を高めるためにこの機能を使用します。選択した背景が歪んで見える場合は、この機能を有効にしてください。",
 	"Settings_Appearance_DomeCameraHeight": "カメラの高さ",
 	"Settings_Appearance_DomeCameraHeightDesc": "背景に対してカメラの高さを調整",
 	"Settings_Appearance_DomeCameraRadius": "ドームの半径",
 	"Settings_Appearance_DomeCameraRadiusDesc": "ドームのサイズを変更する。",
-	"Settings_Appearance_PlayAreaColor": "Play Area",
-	"Settings_Appearance_PlayAreaColorDesc": "Adjust the style of your play area. You will see this when games are loading, or if you have disabled SteamVR Home Beta",
-	"Settings_Appearance_MoreEnvironments": "Get more SteamVR Home Environments",
-	"Settings_Power_ReturnToWatchdogTimeout": "Exit SteamVR after",
-	"Settings_Power_TurnOffScreensTimeout": "Turn off displays after",
-	"Settings_Power_TurnOffControllersTimeout": "Turn off controllers after",
-	"Settings_Power_ControllerOffOnExit": "Turn off controllers when exiting SteamVR",
+	"Settings_Appearance_PlayAreaColor": "プレイエリア",
+	"Settings_Appearance_PlayAreaColorDesc": "プレイエリアのスタイルを調整。これは、ゲームの読み込み時、またはSteamVRホームベータを無効にした際に表示されます。",
+	"Settings_Appearance_MoreEnvironments": "SteamVRホーム環境をもっと得る",
+	"Settings_Power_ReturnToWatchdogTimeout": "次の期間が経過後SteamVRを終了：",
+	"Settings_Power_TurnOffScreensTimeout": "次の時間経過後にディスプレイの電源を切る：",
+	"Settings_Power_TurnOffControllersTimeout": "次の時間経過後にコントローラの電源を切る：",
+	"Settings_Power_ControllerOffOnExit": "SteamVR 終了時にコントローラの電源をオフにする",
 	"Settings_General_DoNotDisturb_Text": "VR内で通知を表示しない",
-	"Settings_General_ShowBindingUI": "Edit Controller Bindings",
-	"Settings_General_ShowTrackerUI": "Manage Vive Trackers",
-	"Settings_Dashboard_ShowProgressIndicator": "Show progress indicator for long press actions",
+	"Settings_General_ShowBindingUI": "コントローラのバインドを編集",
+	"Settings_General_ShowTrackerUI": "Viveトラッカーの管理",
+	"Settings_Dashboard_ShowProgressIndicator": "長押しアクションで進行状況を表示",
 	"SettingsTime_5s": "5秒",
 	"SettingsTime_30s": "30秒",
 	"SettingsTime_1m": "1分",
@@ -179,13 +179,13 @@
 	"SettingsTime_1h": "1時間",
 	"SettingsTime_Never": "なし",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "次の時間経過後に背景を変更：",
-	"Settings_Chaperone_BoundsColor": "Color",
+	"Settings_Chaperone_BoundsColor": "色",
 	"Settings_Chaperone_BoundsAlpha": "Alpha",
 	"Settings_Appearance_Controller": "コントローラモデルの変更",
 	"Settings_Appearance_Base": "ベースステーションモデルの変更",
-	"Settings_Appearance_Environment": "Change your home environment",
+	"Settings_Appearance_Environment": "ホーム環境の変更",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "床の境界を常に表示",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
 	"Settings_Connecting": "SteamVRを起動中...",
-	"Settings_ResetToDefault": "Reset To Default"
+	"Settings_ResetToDefault": "初期設定に戻す"
 }
