--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -31,7 +31,7 @@
 	"VRMonitor_DevNav_Files": "文件",
 	"Settings_Audio_On": "使用 SteamVR 时…",
 	"Settings_Audio_AudioPlay": "设置播放设备到",
-	"Settings_Audio_AudioRecord": "\t设置录制设备到",
+	"Settings_Audio_AudioRecord": "将录制设备设置为",
 	"Settings_Audio_Off": "当 SteamVR 退出时...",
 	"Settings_Audio_HDMIGain": "在 Vive HDMI 音频上启用增益衰减",
 	"Settings_Audio_LeaveAlone": "（不要更改设备）",
@@ -94,7 +94,7 @@
 	"Settings_SmallSpace": "小型空间",
 	"Settings_StartSteamVROnAppLaunch": "启动一个应用程序时同时启动 SteamVR",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "总是显示在顶部",
+	"Settings_StatusWindowAlwaysOnTop_Text": "始终置顶",
 	"Settings_StatusWindowMinimizeToTray_Text": "最小化时将 SteamVR 状态最小化至系统任务栏",
 	"Settings_SuppressWarnings_Text": "SteamVR 状态处于最小化时拦截警告和通知",
 	"StatusCheckInterval_Never": "从不",
@@ -111,7 +111,7 @@
 	"Settings_Chaperone_Style_2": "正方形",
 	"Settings_Chaperone_Style_3": "高级",
 	"Settings_Chaperone_Style_4": "仅限地板",
-	"Settings_Video_AppResFooter": "当前设置在%1$s渲染每只眼睛",
+	"Settings_Video_AppResFooter": "当前设置以 %1$s 渲染每只眼睛",
 	"Settings_Advanced_MotionSmoothing_Header": "运动平滑",
 	"Settings_Advanced_MotionSmoothing_Description": "正在运行的应用程序无法保持帧率时，SteamVR 会合成新帧以保持良好体验。",
 	"Settings_Advanced_MotionSmoothing": "启用运动平滑",
@@ -143,7 +143,7 @@
 	"Settings_Camera_EnableCamera": "启动摄像头",
 	"Settings_Camera_AllowCameraInDashboard": "在主面板中显示摄像头",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "主面板开启时，打开连接到您控制器上的摄像头窗口。",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "使用摄像头扩大 Chaperone 导护系统边界",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "使用摄像头增强 Chaperone 导护系统边界",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "启用房间视角（双击系统键）",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "通过双击系统键来随时访问房间视角",
@@ -165,7 +165,7 @@
 	"Settings_Power_TurnOffScreensTimeout": "在此之后关闭显示：",
 	"Settings_Power_TurnOffControllersTimeout": "在此之后关闭控制器：",
 	"Settings_Power_ControllerOffOnExit": "退出 SteamVR 时关闭控制器",
-	"Settings_General_DoNotDisturb_Text": "处于 VR 中时拦截通知",
+	"Settings_General_DoNotDisturb_Text": "在 VR 中时拦截通知",
 	"Settings_General_ShowBindingUI": "退出控制器按键设置",
 	"Settings_General_ShowTrackerUI": "管理 Vive 追踪器",
 	"Settings_Dashboard_ShowProgressIndicator": "为长按操作显示进度指示器",
