--- a/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
@@ -1,5 +1,5 @@
 {
-	"language": "svenska",
+	"language": "swedish",
 	"VRMonitor_Nav_Overview": "Översikt",
 	"VRMonitor_Nav_Settings": "Inställningar",
 	"VRMonitor_Nav_Help": "Hjälp",
@@ -59,7 +59,7 @@
 	"Advanced_SaveFrameDataNow": "Spara bildrutedata",
 	"Explanation_DisableEnhancedPowerManagement": "Inaktivera Windows förbättrade energisparfunktioner för SteamVR-USB-enheter om du upplever att spårningen oförklarligt avbryts eller inte kan para ihop trådlösa kontroller. ",
 	"Explanation_QuickCalibrate": "Återställer snabbt din rumskonfiguration. För stående VR och VR i rumsskala kommer nya gränser att centreras till ditt headset på golvet i mitten av ditt utrymme.",
-	"Explanation_RebootVive": "Starta om ditt Vive-headset - det kan åtgärda USB-relaterade problem med headsetet.",
+	"Explanation_RebootVive": "Återställ ditt headset - detta kan åtgärda USB-relaterade problem med headsetet.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Ta bort alla USB-enheter som hör till SteamVR från denna datorn för att installera om drivrutinerna.",
 	"Explanation_ResetDismissableWarnings": "Temporära varningar har återställts och kommer visas igen vid tillfälle.",
 	"MenuAction_DisableEnhancedPowerManagement": "Inaktivera energisparfunktioner",
@@ -78,7 +78,7 @@
 	"Settings_CheckForSteam": "Kontrollera Steam",
 	"Settings_DebugInputBindings": "Aktivera avlusningsalternativ i användargränssnittet för inmatningsbindning",
 	"Settings_DoNotFadeToGrid": "Övergå ej till rutnätsvy när app fryser",
-	"Settings_EnableDashboard": "Aktivera VR-instrumentbräda",
+	"Settings_EnableDashboard": "Aktivera VR-instrumentpanel",
 	"Settings_HomeAppCheck": "Använd SteamVR Home",
 	"Settings_HomeAppDesc": "Njut av virtuella miljöer, sociala funktioner och mycket mer.",
 	"Settings_LargeSpace": "Stort utrymme",
@@ -99,7 +99,7 @@
 	"Settings_SuppressWarnings_Text": "Tysta varningar när SteamVR-status är minimerad",
 	"StatusCheckInterval_Never": "Aldrig",
 	"StatusCheckInterval_Normal": "Normalt (1 sek)",
-	"StatusCheckInterval_Often": "Ofta (100 msek)",
+	"StatusCheckInterval_Often": "Ofta (100 ms)",
 	"StatusCheckInterval_Seldom": "Sällan (5 sek)",
 	"Settings_KnockKnock_Button": "Knacka på",
 	"Settings_KnockKnock_Desc": "Detta låter personer utanför VR få headsetanvändarens uppmärksamhet",
@@ -127,7 +127,7 @@
 	"Settings_PerApplication_AppResTitle": " ",
 	"Settings_PerApplication_AppResHeader": "Denna inställning är en multiplikator ovanpå den nuvarande globala inställningen för applikationsupplösning under fliken \"Bild\" till vänster. Denna applikation kan behöva startas om för att inställningarna ska träda i kraft. (Standard är 100%)",
 	"Settings_PerApplication_AppResFooter": "Den nuvarande inställningen renderar varje öga med %1$s",
-	"Settings_PerApplication_OverlayVisibleHeader": "Övertoningsapplikationer finns tillgängliga som flikar på SteamVR-instrumentbrädan.",
+	"Settings_PerApplication_OverlayVisibleHeader": "Övertoningsapplikationer finns tillgängliga som flikar i SteamVR-instrumentpanelen.",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "Starta denna övertoningsapplikation när SteamVR startar.",
 	"Settings_PerApplication_DashboardSuffix": "(Övertoningsapplikation)",
 	"Settings_PerApplication_CustomSuffix": "(Anpassad)",
@@ -137,16 +137,16 @@
 	"Settings_PerApplication_MotionSmoothing_On": "Aktiverad",
 	"Settings_PerApplication_MotionSmoothing_Off": "Inaktiverad",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "Tvinga alltid PÅ",
-	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Varning: Applikation kommer köras i halverad bildhastighet",
+	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Varning: Applikationen kommer köras i halverad bildfrekvens",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "Aktivera rörelseutjämning för denna applikation",
 	"Settings_MimeTypes_Pancake_Header": "Välj en applikation att starta 2D-applikationer i",
 	"Settings_Camera_EnableCamera": "Aktivera kamera",
-	"Settings_Camera_AllowCameraInDashboard": "Visa kameran i dashboarden",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Öppnar ett kamerafönster fäst på din kontroll när dashboarden är uppe.",
+	"Settings_Camera_AllowCameraInDashboard": "Visa kameran i instrumentpanelen",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "Öppnar ett kamerafönster fäst på din kontroll när instrumentpanelen är uppe.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Använd kameran till att förbättra Chaperone-gränser",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Aktivera rumsvy (dubbelklick på Systemknapp)",
-	"Settings_Camera_AllowCameraForRoomView_Desc": "Gå in i rumsvy närsomhelst genom att dubbeltrycka på Systemknappen",
+	"Settings_Camera_AllowCameraForRoomView_Desc": "Gå in i rumsvy när som helst genom att dubbeltrycka på Systemknappen",
 	"Settings_Camera_Compatibility": "Kamerafrekvens",
 	"Settings_Camera_CompatibilityExplanation": "Om du upplever störningar i spårningen kan du behöva ställa in en lägre kamerafrekvens, inaktivera kameran eller pröva med en annan USB-port.",
 	"Advanced_Appearance": "Utseende",
@@ -162,7 +162,7 @@
 	"Settings_Appearance_PlayAreaColorDesc": "Anpassa stilen på ditt spelområde. Du kommer att se detta när spel laddas eller om du har inaktiverat SteamVR Home Beta",
 	"Settings_Appearance_MoreEnvironments": "Skaffa fler SteamVR Home-miljöer",
 	"Settings_Power_ReturnToWatchdogTimeout": "Avsluta SteamVR efter",
-	"Settings_Power_TurnOffScreensTimeout": "Släck skärmarna efter",
+	"Settings_Power_TurnOffScreensTimeout": "Släck displayerna efter",
 	"Settings_Power_TurnOffControllersTimeout": "Stäng av kontroller efter",
 	"Settings_Power_ControllerOffOnExit": "Stäng av kontroller när SteamVR avslutas",
 	"Settings_General_DoNotDisturb_Text": "Dämpa aviseringar i VR",
