--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -32,9 +32,9 @@
 	"Settings_Audio_On": "เมื่อกำลังใช้ SteamVR...",
 	"Settings_Audio_AudioPlay": "กำหนดอุปกรณ์ระบบเสียงเป็น",
 	"Settings_Audio_AudioRecord": "กำหนดอุปกรณ์บันทึกเสียงเป็น",
-	"Settings_Audio_Off": "เมื่อ SteamVR ออกแล้ว...",
-	"Settings_Audio_HDMIGain": "Enable Gain reduction on Vive HDMI Audio",
-	"Settings_Audio_LeaveAlone": "(ไม่เปลี่ยนอุปกรณ์)",
+	"Settings_Audio_Off": "เมื่อออกจาก SteamVR แล้ว...",
+	"Settings_Audio_HDMIGain": "เปิดการใช้งานการลดทอนค่า Gain บนเสียง HDMI ของ Vive",
+	"Settings_Audio_LeaveAlone": "(อย่าเปลี่ยนอุปกรณ์)",
 	"Settings_Audio_AudioMirrorPlay": "ส่งเสียงเสมือนไปยังอุปกรณ์",
 	"Settings_Audio_AudioMirrorUnsupported": "การส่งเสียงเสมือนไม่รองรับบนแพลตฟอร์มนี้",
 	"Settings_Audio_NoMirror": "(ไม่ส่งเสียงเสมือน)",
@@ -53,13 +53,13 @@
 	"Settings_SectionTitle_BaseStation": "สถานีฐาน",
 	"Advanced_AllowSavingOfTimingInfo": "อนุญาตให้บันทึกข้อมูลการจับเวลา",
 	"Advanced_AutoSaveTimingInfoOnExit": "บันทึกข้อมูลการจับเวลาอัตโนมัติเมื่อออก",
-	"Settings_EnableWebHelperDebugger": "Enable web helper debugger",
+	"Settings_EnableWebHelperDebugger": "เปิดการใช้งานเครื่องมือดีบัก Web Helper",
 	"Settings_EnableWebHelperDebuggerDesc": "เปิดการใช้งานเซิร์ฟเวอร์ดีบักเพื่อเชื่อมโยงเครื่องมือ Chromium dev และเครื่องมือดีบักกับหน้า Chromium ที่ฝังอยู่ จากนั้น จำเป็นต้องรีสตาร์ท SteamVR",
 	"Advanced_PerfGraphInHMD": "แสดงกราฟประสิทธิภาพ GPU ในเครื่องสวมศีรษะ",
 	"Advanced_SaveFrameDataNow": "บันทึกข้อมูลเฟรม",
-	"Explanation_DisableEnhancedPowerManagement": "Disable Windows Enhanced Power Management for SteamVR USB Devices if you experience a mysterious loss of tracking or an inability to pair wireless controllers. ",
+	"Explanation_DisableEnhancedPowerManagement": "ปิดการใช้งานการจัดการเพื่อช่วยประหยัดพลังงานของ Windows แก่อุปกรณ์ SteamVR ที่ใช้พอร์ต USB โดยเฉพาะหากคุณประสบปัญหาสูญเสียการติดตามตำแหน่งโดยไม่ทราบสาเหตุ หรือประสบปัญหาไม่สามารถเชื่อมโยงคอนโทรลเลอร์ไร้สายได้ ",
 	"Explanation_QuickCalibrate": "รีเซ็ตการตั้งค่าห้องของคุณอย่างรวดเร็ว สำหรับการยืนและ VR ในขนาดห้อง ขอบเขตใหม่จะถูกปรับศูนย์กลางเป็นตำแหน่งเครื่องสวมศีรษะของคุณบนพื้นในศูนย์กลางของพื้นที่ว่างของคุณ",
-	"Explanation_RebootVive": "Reset your headset - this may fix USB related headset issues.",
+	"Explanation_RebootVive": "รีเซ็ตเครื่องสวมศีรษะของคุณ - นี่อาจช่วยแก้ไขปัญหาเครื่องสวมศีรษะที่เกี่ยวข้องกับ USB ได้",
 	"Explanation_RemoveAllSteamVRUSBDevices": "ถอดอุปกรณ์ USB ทั้งหมดที่เกี่ยวข้องกับ SteamVR จากระบบนี้เพื่อติดตั้งไดรเวอร์เหล่านั้นอีกครั้ง",
 	"Explanation_ResetDismissableWarnings": "คำเตือนชั่วคราวจะถูกรีเซ็ตและจะแสดงอีกครั้งตามที่จำเป็น",
 	"MenuAction_DisableEnhancedPowerManagement": "ปิดการใช้งานการจัดการพลังงาน",
@@ -77,16 +77,16 @@
 	"Settings_ArcadeMode": "เปิดการใช้งานโหมดอาร์เคด",
 	"Settings_CheckForSteam": "ตรวจหา Steam",
 	"Settings_DebugInputBindings": "เปิดการใช้งานตัวเลือกดีบักในอินเตอร์เฟสผู้ใช้สำหรับการกำหนดปุ่มอุปกรณ์ควบคุม",
-	"Settings_DoNotFadeToGrid": "Do not fade to grid when app hangs",
+	"Settings_DoNotFadeToGrid": "ไม่ให้จางหายไปกับตาราง เมื่อแอปเกิดอาการค้าง",
 	"Settings_EnableDashboard": "เปิดการใช้งานกระดานรวม VR",
 	"Settings_HomeAppCheck": "ใช้หน้าหลัก SteamVR",
-	"Settings_HomeAppDesc": "Enjoy virtual environments, social features, and more.",
+	"Settings_HomeAppDesc": "สนุกสนานกับสภาพแวดล้อมแบบความจริงเสมือน คุณสมบัติทางสังคม และอื่น ๆ อีกมากมาย",
 	"Settings_LargeSpace": "พื้นที่ขนาดใหญ่",
 	"Settings_LockedModeCheck": "โหมดล็อค",
-	"Settings_LockedModeDesc": "Allow rendering to headset while computer is locked.",
+	"Settings_LockedModeDesc": "อนุญาตให้เรนเดอร์ไปยังเครื่องสวมศีรษะ ในขณะที่คอมพิวเตอร์ถูกล็อคอยู่",
 	"Settings_MediumSpace": "พื้นที่ขนาดปานกลาง",
 	"Settings_NightModeCheck": "โหมดกลางคืน",
-	"Settings_NightModeDesc": "Dim the headset until 5:00 AM (or until SteamVR is restarted).",
+	"Settings_NightModeDesc": "ลดแสงในเครื่องสวมศีรษะจนถึง 05:00 น. (หรือจนรีสตาร์ท SteamVR)",
 	"Settings_NotificationDoNotDisturb_Info": "เมื่อเปิดการใช้งานโหมดห้ามรบกวน การแจ้งเตือนที่เข้ามาจะไม่แสดงผล",
 	"Settings_NotificationDoNotDisturb_Text": "ห้ามรบกวน",
 	"Settings_PauseOnStandby": "หยุดการเรนเดอร์ชั่วคราวเมื่อเครื่องสวมศีรษะกำลังนิ่งเฉย",
@@ -94,15 +94,15 @@
 	"Settings_SmallSpace": "พื้นที่ขนาดเล็ก",
 	"Settings_StartSteamVROnAppLaunch": "เริ่ม SteamVR เมื่อแอปพลิเคชันเริ่ม",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "Always on Top",
+	"Settings_StatusWindowAlwaysOnTop_Text": "อยู่บนสุดเสมอ",
 	"Settings_StatusWindowMinimizeToTray_Text": "เมื่อย่อหน้าต่าง สถานะ SteamVR จะย่อไปยังถาดระบบ",
-	"Settings_SuppressWarnings_Text": "Suppress warnings and alerts when SteamVR Status is minimized",
+	"Settings_SuppressWarnings_Text": "ระงับคำเตือนและการแจ้งเตือนเมื่อลดสถานะ SteamVR เป็นขั้นต่ำ",
 	"StatusCheckInterval_Never": "ไม่เลย",
 	"StatusCheckInterval_Normal": "ปกติ (1 วินาที)",
 	"StatusCheckInterval_Often": "บ่อย (100 มิลลิวินาที)",
 	"StatusCheckInterval_Seldom": "ไม่บ่อย (5 วินาที)",
 	"Settings_KnockKnock_Button": "ก๊อก ก๊อก",
-	"Settings_KnockKnock_Desc": "This allows people outside of VR to get the headset user's attention",
+	"Settings_KnockKnock_Desc": "นี่เป็นการอนุญาตให้บุคคลภายนอก VR สามารถเรียกความสนใจจากผู้ใช้เครื่องสวมศีรษะได้",
 	"Settings_CreateSystemReport_Button": "สร้างรายงานระบบ",
 	"Settings_ViewLogs_Button": "ดูล็อก",
 	"Settings_Chaperone_Style": "รูปแบบ Chaperone",
@@ -110,19 +110,19 @@
 	"Settings_Chaperone_Style_1": "ปานกลาง",
 	"Settings_Chaperone_Style_2": "จตุรัส",
 	"Settings_Chaperone_Style_3": "ขั้นสูง",
-	"Settings_Chaperone_Style_4": "Floor only",
-	"Settings_Video_AppResFooter": "The current setting renders each eye at %1$s",
+	"Settings_Chaperone_Style_4": "พื้นเท่านั้น",
+	"Settings_Video_AppResFooter": "การตั้งค่าปัจจุบันจะเรนเดอร์ภาพบนตาแต่ละข้างที่ %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "ความเคลื่อนไหวแบบราบรื่น",
-	"Settings_Advanced_MotionSmoothing_Description": "Synthesizes new frames to maintain a good experience when the running application cannot keep up.",
+	"Settings_Advanced_MotionSmoothing_Description": "จำลองเฟรมใหม่เพื่อรักษาประสบการณ์ที่ดีให้ยังคงอยู่ เมื่อแอปพลิเคชันที่กำลังทำงานอยู่ไม่สามารถทำงานได้ทัน",
 	"Settings_Advanced_MotionSmoothing": "เปิดการใช้งานความเคลื่อนไหวแบบราบรื่น",
 	"Settings_Advanced_MotionSmoothing_Disabled": "ความเคลื่อนไหวแบบราบรื่นจำเป็นต้องใช้การรองรับรีโปรเจกชันแบบอะซิงโครนัส",
 	"Settings_Advanced_Supersampling_Header": "ความละเอียดภาพของแอปพลิเคชัน",
-	"Settings_Advanced_Supersampling_Warning": "The setting below overrides the automated setting and affects all applications. To change the resolution for a specific application, visit Applications Settings.",
-	"Settings_Advanced_SupersamplingManualOverride": "เปิดการใช้งานการปรับความละเอียด",
+	"Settings_Advanced_Supersampling_Warning": "การตั้งค่าด้านล่างนี้จะกำหนดค่าทับการตั้งค่าแบบอัตโนมัติ และจะส่งผลต่อแอปพลิเคชันทั้งหมด หากต้องการเปลี่ยนค่าความละเอียดภาพสำหรับแอปพลิเคชันบางตัว กรุณาไปที่การตั้งค่าแอปพลิเคชัน",
+	"Settings_Advanced_SupersamplingManualOverride": "เปิดการใช้งานการปรับความละเอียดภาพ",
 	"Explanation_Supersampling_Header": "SteamVR กำหนดความละเอียดภาพของแอปพลิเคชันของคุณโดยอัตโนมัติตามประสิทธิภาพ GPU ของคุณ",
 	"Explanation_Supersampling": "*บางแอปพลิเคชันอาจจำเป็นต้องรีสตาร์ทเพื่อให้การตั้งค่าส่งผล",
 	"Explanation_SupersamplingFiltering": "ตัวเลือกการกรองซูเปอร์แซมพลิง:",
-	"Settings_PerApplication_Header": "Create unique rendering settings for specific applications",
+	"Settings_PerApplication_Header": "ทำการตั้งค่าเรนเดอร์พิเศษสำหรับแอปพลิเคชันที่เฉพาะเจาะจง",
 	"Settings_PerApplication_ChooseApplication": "เลือกแอปพลิเคชัน",
 	"Settings_PerApplication_AppResTitle": " ",
 	"Settings_PerApplication_AppResHeader": "การตั้งค่านี้เป็นตัวคูณกับค่าผลลัพธ์จากการตั้งค่าความละเอียดภาพของแอปพลิเคชันโดยรวมปัจจุบันบนแท็บวิดีโอด้านซ้าย แอปพลิเคชันนี้อาจจำเป็นต้องรีสตาร์ทเพื่อให้การตั้งค่าส่งผล (ค่าเริ่มต้นคือ 100%)",
@@ -138,29 +138,29 @@
 	"Settings_PerApplication_MotionSmoothing_Off": "ปิดการใช้งาน",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "บังคับเปิดตลอดเวลา",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "คำเตือน: แอปพลิเคชันจะทำงานที่อัตราเฟรมเพียงครึ่งเดียว",
-	"Settings_PerApplication_MotionSmoothing_Checkbox": "Enable motion smoothing for this application",
+	"Settings_PerApplication_MotionSmoothing_Checkbox": "เปิดการใช้งานความเคลื่อนไหวแบบราบรื่นสำหรับแอปพลิเคชันนี้",
 	"Settings_MimeTypes_Pancake_Header": "เลือกแอปพลิเคชันเพื่อเปิดแอปพลิเคชันแบบ 2D ใน",
 	"Settings_Camera_EnableCamera": "เปิดการใช้งานกล้อง",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera in Dashboard",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Use camera to enhance chaperone bounds",
+	"Settings_Camera_AllowCameraInDashboard": "แสดงกล้องในกระดานรวม",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "เปิดหน้าต่างกล้องที่แนบกับคอนโทรลเลอร์ของคุณ เมื่อกระดานรวมเปิดขึ้นมา",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "ใช้กล้องเพื่อเสริมขอบเขต Chaperone",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Enable Room View (System button double-click)",
-	"Settings_Camera_AllowCameraForRoomView_Desc": "Access Room View at any time by double clicking the System button",
+	"Settings_Camera_AllowCameraForRoomView": "เปิดใช้มุมมองห้อง (ดับเบิลคลิกปุ่มระบบ)",
+	"Settings_Camera_AllowCameraForRoomView_Desc": "เข้าถึงมุมมองห้องเมื่อไหร่ก็ได้ โดยการคลิกปุ่มระบบสองครั้ง",
 	"Settings_Camera_Compatibility": "อัตรากล้อง",
 	"Settings_Camera_CompatibilityExplanation": "หากคุณประสบปัญหาสูญเสียการติดตาม คุณอาจต้องกำหนดอัตรากล้องให้ต่ำลง ปิดการใช้งานกล้อง หรือลองเสียบพอร์ต USB ช่องอื่น",
 	"Advanced_Appearance": "ลักษณะที่ปรากฏ",
 	"Settings_Appearance_Background": "พื้นหลัง",
-	"Settings_Appearance_BackgroundDesc": "Pick a background for the default space",
+	"Settings_Appearance_BackgroundDesc": "เลือกพื้นหลังสำหรับพื้นที่เริ่มต้น",
 	"Settings_Appearance_UseDomeProjection": "ใช้โปรเจคชันแบบโดม",
 	"Settings_Appearance_UseDomeProjectionDesc": "เปลี่ยนรูปแบบโปรเจกชันของภาพพื้นหลัง พื้นหลังบางอย่างจะใช้คุณสมบัตินี้เพื่อให้ประสบการณ์ที่สมจริงยิ่งขึ้น หากพื้นหลังที่คุณเลือกดูบิดเบี้ยวไป ให้ลองเปิดการใช้งานคุณสมบัตินี้",
 	"Settings_Appearance_DomeCameraHeight": "ความสูงมุมกล้อง",
 	"Settings_Appearance_DomeCameraHeightDesc": "ปรับความสูงของกล้องให้สัมพันธ์กับพื้นหลัง",
 	"Settings_Appearance_DomeCameraRadius": "รัศมีโดม",
 	"Settings_Appearance_DomeCameraRadiusDesc": "เปลี่ยนขนาดของโดม",
-	"Settings_Appearance_PlayAreaColor": "Play Area",
-	"Settings_Appearance_PlayAreaColorDesc": "Adjust the style of your play area. You will see this when games are loading, or if you have disabled SteamVR Home Beta",
-	"Settings_Appearance_MoreEnvironments": "Get more SteamVR Home Environments",
+	"Settings_Appearance_PlayAreaColor": "พื้นที่เล่น",
+	"Settings_Appearance_PlayAreaColorDesc": "ปรับสไตล์พื้นที่การเล่นของคุณ คุณจะมองเห็นการปรับนี้ได้ขณะที่เกมกำลังโหลด หรือเมื่อคุณปิดการใช้งานหน้าหลักเบต้า SteamVR",
+	"Settings_Appearance_MoreEnvironments": "รับสภาพแวดล้อมภายในบ้าน SteamVR เพิ่มเติม",
 	"Settings_Power_ReturnToWatchdogTimeout": "ออกจาก SteamVR หลังจาก",
 	"Settings_Power_TurnOffScreensTimeout": "ปิดหน้าจอหลังจาก",
 	"Settings_Power_TurnOffControllersTimeout": "ปิดคอนโทรลเลอร์หลังจาก",
@@ -168,7 +168,7 @@
 	"Settings_General_DoNotDisturb_Text": "ไม่แสดงการแจ้งเตือนขณะอยู่ใน VR",
 	"Settings_General_ShowBindingUI": "แก้ไขการกำหนดปุ่มคอนโทรลเลอร์",
 	"Settings_General_ShowTrackerUI": "จัดการเครื่องติดตาม Vive",
-	"Settings_Dashboard_ShowProgressIndicator": "Show progress indicator for long press actions",
+	"Settings_Dashboard_ShowProgressIndicator": "แสดงตัวบ่งชี้ความคืบหน้าสำหรับคำสั่งกดนาน",
 	"SettingsTime_5s": "5 วินาที",
 	"SettingsTime_30s": "30 วินาที",
 	"SettingsTime_1m": "1 นาที",
