--- a/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
@@ -59,12 +59,12 @@
 	"Advanced_SaveFrameDataNow": "Kare Verisini Kaydet",
 	"Explanation_DisableEnhancedPowerManagement": "Eğer anlaşılmayan bir biçimde takip etme kaybı yaşıyor veya kablosuz kontrolcüleri eşleştiremiyorsanız, Windows Gelişmiş Güç Yönetimini SteamVR USB Aygıtları için devre dışı bırakın.",
 	"Explanation_QuickCalibrate": "Hızlı bir şekilde Oda Kurulumunu sıfırlayın. Ayakta ve Oda Ölçeği VR için alanınızın merkezindeki zemindeyken başlığınızda yeni sınırlar ortalanacak.",
-	"Explanation_RebootVive": "Başlığınızı sıfırlayın. Bu USB kaynaklı başlık sorunlarını çözebilir.",
+	"Explanation_RebootVive": "Başlığınızı yeniden başlatın. Bu USB kaynaklı başlık sorunlarını çözebilir.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Sürücüleri tekrar yüklemek için SteamVR ile ilişkili tüm USB aygıtları sistemden kaldırın.",
 	"Explanation_ResetDismissableWarnings": "Geçici uyarılar sıfırlandı ve gerektikleri zaman tekrar görünecekler.",
 	"MenuAction_DisableEnhancedPowerManagement": "Güç Yönetimini Devre Dışı Bırak",
 	"MenuAction_QuickCalibrate": "Hızlı Ölçümleme",
-	"MenuAction_RebootVive": "Başlığı Sıfırla",
+	"MenuAction_RebootVive": "Başlığı Yeniden Başlat",
 	"MenuAction_RecordTrackingData": "Takip Verisini Kaydet",
 	"MenuAction_RemoveAllSteamVRUSBDevices": "Tüm SteamVR USB Aygıtlarını kaldır",
 	"MenuAction_ResetDismissableWarnings": "Uyarıları Sıfırla",
@@ -77,7 +77,7 @@
 	"Settings_ArcadeMode": "Arcade Modunu Etkinleştir",
 	"Settings_CheckForSteam": "Steam'i kontrol et",
 	"Settings_DebugInputBindings": "Girdi atama kullanıcı arayüzünden hata ayıklama seçeneklerini etkinleştirin",
-	"Settings_DoNotFadeToGrid": "Do not fade to grid when app hangs",
+	"Settings_DoNotFadeToGrid": "Uygulama donduğunda ızgaraları gösterme",
 	"Settings_EnableDashboard": "VR Panosunu Etkinleştir",
 	"Settings_HomeAppCheck": "SteamVR Ev'i Kullan",
 	"Settings_HomeAppDesc": "Sanal ortamların, sosyal özelliklerin ve daha fazlasının tadını çıkarın.",
@@ -86,7 +86,7 @@
 	"Settings_LockedModeDesc": "Bilgisayar kilitliyken başlığa görüntü işlenmesine izin ver.",
 	"Settings_MediumSpace": "Orta Büyüklükteki Alan",
 	"Settings_NightModeCheck": "Gece Modu",
-	"Settings_NightModeDesc": "Başlık parlaklığını 05:00'e (veya SteamVR yeniden başlatılana) kadar azaltır.",
+	"Settings_NightModeDesc": "Başlık parlaklığını sabah 05:00'e (veya SteamVR yeniden başlatılana) kadar azaltır.",
 	"Settings_NotificationDoNotDisturb_Info": "Rahatsız Etme etkinleştirildiğinde gelen bildirimler gizlenecektir.",
 	"Settings_NotificationDoNotDisturb_Text": "Rahatsız Etme",
 	"Settings_PauseOnStandby": "Başlık boştayken işlemeyi duraklat",
@@ -111,18 +111,18 @@
 	"Settings_Chaperone_Style_2": "Kareler",
 	"Settings_Chaperone_Style_3": "Gelişmiş",
 	"Settings_Chaperone_Style_4": "Sadece zemin",
-	"Settings_Video_AppResFooter": "The current setting renders each eye at %1$s",
+	"Settings_Video_AppResFooter": "Mevcut ayarlar iki gözü de %1$s olarak kabul eder",
 	"Settings_Advanced_MotionSmoothing_Header": "Hareket Düzeltme",
-	"Settings_Advanced_MotionSmoothing_Description": "Synthesizes new frames to maintain a good experience when the running application cannot keep up.",
+	"Settings_Advanced_MotionSmoothing_Description": "Çalışan uygulamanın, kare hızını yakalayamadığı durumlarda deneyim kalitesini sürdürmek için yeni kareler sentezler.",
 	"Settings_Advanced_MotionSmoothing": "Hareket düzeltmeyi etkinleştir",
 	"Settings_Advanced_MotionSmoothing_Disabled": "Hareket Düzeltmesi eşzamansız yeniden yansıtma desteğine gereksinim duyar.",
 	"Settings_Advanced_Supersampling_Header": "Uygulama Çözünürlüğü",
-	"Settings_Advanced_Supersampling_Warning": "The setting below overrides the automated setting and affects all applications. To change the resolution for a specific application, visit Applications Settings.",
-	"Settings_Advanced_SupersamplingManualOverride": "Enable resolution adjustments",
+	"Settings_Advanced_Supersampling_Warning": "Aşağıdaki ayar, otomatik ayarı geçersiz kılar ve tüm uygulamaları etkiler. Belirli bir uygulamanın çözünürlüğünü değiştirmek için Uygulama Ayarları'na gidin.",
+	"Settings_Advanced_SupersamplingManualOverride": "Çözünürlük ayarlamalarını etkinleştir",
 	"Explanation_Supersampling_Header": "SteamVR, GPU'nuzun performansına göre uygulama çözünürlüğünüzü otomatik olarak ayarlar.",
 	"Explanation_Supersampling": "*Ayarların devreye girebilmesi için bazı uygulamaların yeniden başlatılması gerekebilir.",
 	"Explanation_SupersamplingFiltering": "Süper Örnekleme Filtreleme Seçenekleri:",
-	"Settings_PerApplication_Header": "Create unique rendering settings for specific applications",
+	"Settings_PerApplication_Header": "Belirli uygulamalar için özel işleme ayarları yaratma",
 	"Settings_PerApplication_ChooseApplication": "Bir uygulama seçin",
 	"Settings_PerApplication_AppResTitle": " ",
 	"Settings_PerApplication_AppResHeader": "Bu ayar, solda yer alan Görüntü sekmesindeki mevcut genel uygulama çözünürlüğüne eklenen bir çarpandır. Ayarların devreye girebilmesi için bu uygulamanın yeniden başlatılması gerekebilir. (Varsayılan %100'dür)",
@@ -142,16 +142,16 @@
 	"Settings_MimeTypes_Pancake_Header": "2B uygulamaların çalıştırılacağı uygulamayı seçin",
 	"Settings_Camera_EnableCamera": "Kamerayı Etkinleştir",
 	"Settings_Camera_AllowCameraInDashboard": "Panoda Kamerayı Göster",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Use camera to enhance chaperone bounds",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "Pano açık olduğunda kontrolcünüze bağlı kamera penceresini açar.",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Chaperone sınırlarını iyileştirmek için kamerayı kullan",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Enable Room View (System button double-click)",
-	"Settings_Camera_AllowCameraForRoomView_Desc": "Access Room View at any time by double clicking the System button",
+	"Settings_Camera_AllowCameraForRoomView": "Oda Görünümünü Etkinleştir (sistem butonuna çift tıklayın)",
+	"Settings_Camera_AllowCameraForRoomView_Desc": "Sistem butonuna iki kez tıklayarak istediğiniz zaman Oda Görünümüne erişin",
 	"Settings_Camera_Compatibility": "Kamera oranı",
 	"Settings_Camera_CompatibilityExplanation": "Takip kaybı yaşarsanız, daha düşük bir Kamera Oranı ayarlayın, kamerayı devre dışı bırakın ya da farklı bir USB bağlantı noktasını deneyebilirsiniz.",
 	"Advanced_Appearance": "Görünüm",
 	"Settings_Appearance_Background": "Arka Plan",
-	"Settings_Appearance_BackgroundDesc": "Varsayılan alan için bir arka plan seç",
+	"Settings_Appearance_BackgroundDesc": "Varsayılan alan için bir arka plan seçin",
 	"Settings_Appearance_UseDomeProjection": "Kubbe İzdüşümünü Kullan",
 	"Settings_Appearance_UseDomeProjectionDesc": "Arka plan resminin yansıtma tarzını değiştirir. Bazı arka planlar daha iyi bir deneyim sağlayabilmek için bu özelliği kullanır. Seçtiğiniz arka plan bozuk görünürse, bu özelliği etkinleştirmeyi deneyin.",
 	"Settings_Appearance_DomeCameraHeight": "Kamera Yüksekliği",
@@ -159,16 +159,16 @@
 	"Settings_Appearance_DomeCameraRadius": "Kubbe Yarıçapı",
 	"Settings_Appearance_DomeCameraRadiusDesc": "Kubbe boyutunu değiştirir.",
 	"Settings_Appearance_PlayAreaColor": "Oyun Alanı",
-	"Settings_Appearance_PlayAreaColorDesc": "Adjust the style of your play area. You will see this when games are loading, or if you have disabled SteamVR Home Beta",
-	"Settings_Appearance_MoreEnvironments": "Get more SteamVR Home Environments",
-	"Settings_Power_ReturnToWatchdogTimeout": "Exit SteamVR after",
-	"Settings_Power_TurnOffScreensTimeout": "Turn off displays after",
-	"Settings_Power_TurnOffControllersTimeout": "Turn off controllers after",
-	"Settings_Power_ControllerOffOnExit": "Turn off controllers when exiting SteamVR",
+	"Settings_Appearance_PlayAreaColorDesc": "Oyun alanınızın tarzını belirleyin. Bunu oyunlar yüklenirken veya SteamVR Ev Betayı devre dışı bıraktıysanız görürsünüz",
+	"Settings_Appearance_MoreEnvironments": "Daha fazla SteamVR Ev Ortamı edinin",
+	"Settings_Power_ReturnToWatchdogTimeout": "Şu süreden sonra SteamVR'dan çık",
+	"Settings_Power_TurnOffScreensTimeout": "Şu süreden sonra ekranları kapat",
+	"Settings_Power_TurnOffControllersTimeout": "Şu süreden sonra kontrolcüleri kapat",
+	"Settings_Power_ControllerOffOnExit": "SteamVR'dan çıkarken kontrolcüleri kapat",
 	"Settings_General_DoNotDisturb_Text": "VR'dayken bildirimleri gizle",
-	"Settings_General_ShowBindingUI": "Edit Controller Bindings",
-	"Settings_General_ShowTrackerUI": "Manage Vive Trackers",
-	"Settings_Dashboard_ShowProgressIndicator": "Show progress indicator for long press actions",
+	"Settings_General_ShowBindingUI": "Kontrolcü Yapılandırmasını Düzenle",
+	"Settings_General_ShowTrackerUI": "Vive Takipçilerini Yönet",
+	"Settings_Dashboard_ShowProgressIndicator": "Uzun basma işlemleri için ilerleme göstergesini göster",
 	"SettingsTime_5s": "5 Saniye",
 	"SettingsTime_30s": "30 Saniye",
 	"SettingsTime_1m": "1 Dakika",
@@ -179,13 +179,13 @@
 	"SettingsTime_1h": "1 Saat",
 	"SettingsTime_Never": "Asla",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "Şu süreden sonra arka planı değiştir:",
-	"Settings_Chaperone_BoundsColor": "Color",
-	"Settings_Chaperone_BoundsAlpha": "Alpha",
+	"Settings_Chaperone_BoundsColor": "Renk",
+	"Settings_Chaperone_BoundsAlpha": "Alfa",
 	"Settings_Appearance_Controller": "Kontrolcü modelinizi değiştirin",
 	"Settings_Appearance_Base": "Ana istasyon modelinizi değiştirin",
-	"Settings_Appearance_Environment": "Change your home environment",
+	"Settings_Appearance_Environment": "Ev ortamınızı değiştirin",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Zemin sınırlarını her zaman göster",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
 	"Settings_Connecting": "SteamVR'ın başlaması bekleniyor...",
-	"Settings_ResetToDefault": "Reset To Default"
+	"Settings_ResetToDefault": "Varsayılana Sıfırla"
 }
