--- a/resources/webinterface/dashboard/localization/webhelper_brazilian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_brazilian.json
@@ -11,8 +11,8 @@
 	"Button_Save": "Salvar",
 	"Button_Done": "OK",
 	"Button_Back": "Voltar",
-	"Button_Next": "Next",
-	"Button_Retry": "Retry",
+	"Button_Next": "Avançar",
+	"Button_Retry": "Tentar novamente",
 	"Settings": "Configurações",
 	"PowerMenuResetSeatedPosition": "Redefinir posição sentada",
 	"PowerMenuTurnOffController": "Desligar controle",
