--- a/resources/webinterface/dashboard/localization/webhelper_french.json
+++ b/resources/webinterface/dashboard/localization/webhelper_french.json
@@ -27,8 +27,8 @@
 	"/input/trackpad": "Trackpad",
 	"/input/trigger": "Gâchette",
 	"/input/grip": "Poignée",
-	"/input/application_menu": "Menu",
-	"/input/system": "Système",
+	"/input/application_menu": "Bouton menu",
+	"/input/system": "Bouton Système",
 	"/proximity": "Capteur de proximité",
 	"/input/a": "Bouton A",
 	"/input/b": "Bouton B",
