--- a/resources/webinterface/dashboard/localization/webhelper_german.json
+++ b/resources/webinterface/dashboard/localization/webhelper_german.json
@@ -22,7 +22,7 @@
 	"PowerMenuHeader": "Energiemenü",
 	"IPD_Description": "Abstand zwischen Linsen",
 	"NoSteamWarning": "Steam ist nicht verfügbar. Einige Funktionen könnten deaktiviert sein.",
-	"WakingUpBaseStations": "Basisstationen wecken...",
+	"WakingUpBaseStations": "Basisstationen werden geweckt...",
 	"/input/joystick": "Joystick",
 	"/input/trackpad": "Trackpad",
 	"/input/trigger": "Trigger",
