--- a/resources/webinterface/dashboard/localization/webhelper_japanese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_japanese.json
@@ -11,8 +11,8 @@
 	"Button_Save": "保存",
 	"Button_Done": "完了",
 	"Button_Back": "戻る",
-	"Button_Next": "Next",
-	"Button_Retry": "Retry",
+	"Button_Next": "次へ",
+	"Button_Retry": "再試行",
 	"Settings": "設定",
 	"PowerMenuResetSeatedPosition": "着席位置のリセット",
 	"PowerMenuTurnOffController": "コントローラの電源を切る",
@@ -22,7 +22,7 @@
 	"PowerMenuHeader": "電源メニュー",
 	"IPD_Description": "レンズ間の距離",
 	"NoSteamWarning": "Steamを利用できません。一部の機能が無効の可能性があります。",
-	"WakingUpBaseStations": "Waking up base stations...",
+	"WakingUpBaseStations": "ベースステーションを起動中...",
 	"/input/joystick": "ジョイスティック",
 	"/input/trackpad": "トラックパッド",
 	"/input/trigger": "トリガー",
