--- a/resources/webinterface/dashboard/localization/bindingui_schinese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_schinese.json
@@ -55,38 +55,38 @@
   "SourceInputMode_ScrollMode_Discrete": "离散（如鼠标滚轮）",
   "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "触控板纵横比（宽/高）：",
   "SourceInputMode_SmoothScroll_Multiplier": "滚动乘数：",
-  "SourceInputMode_SmoothScroll_AccelerationPower": "加速力：",
+  "SourceInputMode_SmoothScroll_AccelerationPower": "加速功率：",
   "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "各触控板高度的触感凹槽：",
   "SourceInputMode_SmoothScroll_StartDistance": "最小滚动距离：",
   "SourceInputMode_SmoothScroll_MinThrowVelocity": "最小投掷速度：",
   "SourceInputMode_SmoothScroll_MaxScrollVelocity": "最大滚动速度：",
   "SourceInputMode_SmoothScroll_Deceleration": "减速量：",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "上次最小速度至平均速度：",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "上次最大速度至平均速度：",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "引发终止速度：",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "边缘滚动阈值：",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "计算平均速度所需最少先前速度：",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "计算平均速度所需最多先前速度：",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "投掷终止速度：",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "边缘滚动临界值：",
   "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "边缘滚动临界值垂直偏差：",
   "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "边缘滚动速度：",
   "SourceInputMode_SmoothScroll_EdgeMinSwipe": "边缘滚动所需最少滑动：",
-  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "水平游动所需比率：",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "最小输入大小：",
+  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "水平滚动所需比率：",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "最小输入幅度：",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "滚动比例：",
-  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "触控触感：",
+  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "触摸触感：",
   "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "反向抑制已启用：",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "触控灵敏度：",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "触摸灵敏度：",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "滑动灵敏度：",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "反向灵敏度：",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "开始阈值",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "移动阈值：",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "反向阈值：",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "开始临界值：",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "移动临界值：",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "反向临界值：",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "轻扫滚动已启动用：",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "轻扫临界值：",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "轻扫滚动乘数：",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "轻扫动量：",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "按住滑动滚动：",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "滑动与保持乘数：",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "滑动与保持脉冲率：",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "滑动与保持上边框：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "滑动并保持滚动：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H 乘数：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H 脉冲率：",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H 上边框：",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "滑动与保持下边框：",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "滑动与保持触感：",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "滚动速率：",
@@ -249,7 +249,7 @@
   "TrackerEditor_SelectControllerRole": "左右手选择：",
   "SaveNotice_Saving": "正在保存…",
   "SaveNotice_Uploading": "正在上传…",
-  "LegacySetupTab": "设置传统操作",
+  "LegacySetupTab": "设置旧版操作",
   "ShowAllAliases": "显示隐藏操作",
   "DeleteSimulatedAction": "删除",
   "AddSimulatedAction": "添加操作",
