--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -48,13 +48,13 @@
 	"Settings_SectionTitle_Bluetooth": "藍牙",
 	"Settings_SectionTitle_Power": "電源",
 	"Settings_SectionTitle_Internal": "內部",
-	"Settings_SectionTitle_Home": "Home",
+	"Settings_SectionTitle_Home": "首頁",
 	"Settings_SectionTitle_Chaperone": "Chaperone 導護系統",
 	"Settings_SectionTitle_BaseStation": "定位器",
 	"Advanced_AllowSavingOfTimingInfo": "允許儲存時間資訊",
 	"Advanced_AutoSaveTimingInfoOnExit": "退出時自動儲存時間資訊",
 	"Settings_EnableWebHelperDebugger": "啟用 Web Helper 偵錯工具",
-	"Settings_EnableWebHelperDebuggerDesc": "啟動偵錯伺服器，以將 Chromium 開發者與偵錯工具連接至嵌入的 Chromium 頁面。必須重新啟動 SteamVR。",
+	"Settings_EnableWebHelperDebuggerDesc": "啟用偵錯伺服器，以將 Chromium 開發者與偵錯工具連接至嵌入的 Chromium 頁面。必須重新啟動 SteamVR。",
 	"Advanced_PerfGraphInHMD": "在頭戴顯示器內顯示 GPU 效能圖表",
 	"Advanced_SaveFrameDataNow": "儲存影格資料",
 	"Explanation_DisableEnhancedPowerManagement": "如果您已配對的無線控制器原因不明地追蹤不到動作或沒有反應，請停用 Windows 進階電源管理針對 SteamVR USB 裝置的設定。 ",
@@ -74,10 +74,10 @@
 	"Settings_Advanced_Paths_Header": "路徑",
 	"Settings_Advanced_Reset_Header": "重設",
 	"Settings_Advanced_Status_Header": "狀態檢查",
-	"Settings_ArcadeMode": "啟動大型機台模式",
+	"Settings_ArcadeMode": "啟用大型機台模式",
 	"Settings_CheckForSteam": "檢查 Steam",
 	"Settings_DebugInputBindings": "啟用輸入配置使用者介面中的偵錯選項",
-	"Settings_DoNotFadeToGrid": "Do not fade to grid when app hangs",
+	"Settings_DoNotFadeToGrid": "應用程式當機時，不淡出為方格",
 	"Settings_EnableDashboard": "啟用 VR 主控台",
 	"Settings_HomeAppCheck": "使用 SteamVR 家",
 	"Settings_HomeAppDesc": "享受虛擬場景、社交功能，和更多精彩內容。",
@@ -86,7 +86,7 @@
 	"Settings_LockedModeDesc": "電腦鎖定時，允許頭戴顯示器內的彩現。",
 	"Settings_MediumSpace": "中型空间",
 	"Settings_NightModeCheck": "夜間模式",
-	"Settings_NightModeDesc": "Dim the headset until 5:00 AM (or until SteamVR is restarted).",
+	"Settings_NightModeDesc": "調低螢幕亮度直到凌晨 5 點（或重新啟動 SteamVR）。",
 	"Settings_NotificationDoNotDisturb_Info": "啟用「請勿打擾」時，收到的通知將被攔截。",
 	"Settings_NotificationDoNotDisturb_Text": "請勿打擾",
 	"Settings_PauseOnStandby": "頭戴顯示器閒置時。暫停彩現",
@@ -94,17 +94,17 @@
 	"Settings_SmallSpace": "小型空間",
 	"Settings_StartSteamVROnAppLaunch": "執行應用程式時同時啟動 SteamVR",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "Always on Top",
+	"Settings_StatusWindowAlwaysOnTop_Text": "永遠置於頂端",
 	"Settings_StatusWindowMinimizeToTray_Text": "最小化時將 SteamVR 狀態最小化至系統匣",
-	"Settings_SuppressWarnings_Text": "Suppress warnings and alerts when SteamVR Status is minimized",
+	"Settings_SuppressWarnings_Text": "SteamVR 狀態最小化時，隱藏警告與通知",
 	"StatusCheckInterval_Never": "永不",
 	"StatusCheckInterval_Normal": "正常（1 秒）",
 	"StatusCheckInterval_Often": "經常（100 毫秒）",
 	"StatusCheckInterval_Seldom": "很少（5 秒）",
-	"Settings_KnockKnock_Button": "Knock Knock",
-	"Settings_KnockKnock_Desc": "This allows people outside of VR to get the headset user's attention",
+	"Settings_KnockKnock_Button": "叩叩",
+	"Settings_KnockKnock_Desc": "此設定能讓身處 VR 之外的人引起帶著頭戴顯示器的使用者的注意",
 	"Settings_CreateSystemReport_Button": "建立系統報告",
-	"Settings_ViewLogs_Button": "View Logs",
+	"Settings_ViewLogs_Button": "檢視記錄",
 	"Settings_Chaperone_Style": "Chaperone 導護系統樣式",
 	"Settings_Chaperone_Style_0": "初階",
 	"Settings_Chaperone_Style_1": "中階",
@@ -113,16 +113,16 @@
 	"Settings_Chaperone_Style_4": "僅有地板",
 	"Settings_Video_AppResFooter": "目前各眼的彩現設定為 %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "動態平滑",
-	"Settings_Advanced_MotionSmoothing_Description": "Synthesizes new frames to maintain a good experience when the running application cannot keep up.",
-	"Settings_Advanced_MotionSmoothing": "Enable motion smoothing",
+	"Settings_Advanced_MotionSmoothing_Description": "若執行中的應用程式無法維持幀率，即合成出新幀，以保持良好的體驗品質。",
+	"Settings_Advanced_MotionSmoothing": "啟用動態平滑",
 	"Settings_Advanced_MotionSmoothing_Disabled": "動態平滑必須具非同步再投影支援。",
 	"Settings_Advanced_Supersampling_Header": "應用程式解析度",
-	"Settings_Advanced_Supersampling_Warning": "The setting below overrides the automated setting and affects all applications. To change the resolution for a specific application, visit Applications Settings.",
-	"Settings_Advanced_SupersamplingManualOverride": "Enable resolution adjustments",
+	"Settings_Advanced_Supersampling_Warning": "下方的設定將覆蓋所有自動設定，並會影響所有應用程式。若希望更改特定應用程式的解析度，請至「應用程式設定」。",
+	"Settings_Advanced_SupersamplingManualOverride": "啟用解析度調整",
 	"Explanation_Supersampling_Header": "SteamVR 會自動根據您的 GPU 效能設定應用程式解析度。",
 	"Explanation_Supersampling": "* 部份應用程式可能需要重新啟動，設定才會生效。",
 	"Explanation_SupersamplingFiltering": "超取樣濾鏡選項：",
-	"Settings_PerApplication_Header": "Create unique rendering settings for specific applications",
+	"Settings_PerApplication_Header": "為特定應用程式建立獨特的彩現設定",
 	"Settings_PerApplication_ChooseApplication": "選擇一款應用程式",
 	"Settings_PerApplication_AppResTitle": " ",
 	"Settings_PerApplication_AppResHeader": "此設定為左方「影像」分頁目前全域應用程式解析度設定的乘數。可能需要重新啟動此應用程式，設定才會生效。（預設為 100%）",
@@ -133,16 +133,16 @@
 	"Settings_PerApplication_CustomSuffix": "（自訂）",
 	"Settings_PerApplication_MotionSmoothing_Header": "動態平滑",
 	"Settings_PerApplication_MotionSmoothing_Description": "使用下方的核選方塊覆寫此應用程式的動態平滑全域設定。（動態平滑的全域設定為 <font color=#eeeeee>%1</font>）",
-	"Settings_PerApplication_MotionSmoothing_Global": "Use global setting",
-	"Settings_PerApplication_MotionSmoothing_On": "Enabled",
-	"Settings_PerApplication_MotionSmoothing_Off": "Disabled",
-	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "Force Always-On",
-	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Warning: Application will run at half framerate",
-	"Settings_PerApplication_MotionSmoothing_Checkbox": "Enable motion smoothing for this application",
+	"Settings_PerApplication_MotionSmoothing_Global": "使用全域設定",
+	"Settings_PerApplication_MotionSmoothing_On": "已啟用",
+	"Settings_PerApplication_MotionSmoothing_Off": "已停用",
+	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "永遠啟用力度",
+	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "警告：應用程式將原先幀率的一半執行",
+	"Settings_PerApplication_MotionSmoothing_Checkbox": "為此應用程式啟用動態平滑",
 	"Settings_MimeTypes_Pancake_Header": "選擇用以啟動 2D 應用程式的應用程式",
 	"Settings_Camera_EnableCamera": "啟用鏡頭",
 	"Settings_Camera_AllowCameraInDashboard": "於主控台內顯示鏡頭",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "主控台開啟時，顯示位於控制器上方的鏡頭視窗。",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "使用鏡頭加強 Chaperone 導護系統",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "啟用房間視角（按兩下「系統鍵」）",
@@ -150,25 +150,25 @@
 	"Settings_Camera_Compatibility": "鏡頭頻率",
 	"Settings_Camera_CompatibilityExplanation": "若在使用時失去定位，您可能需將鏡頭頻率調低、禁用鏡頭，或換到其他的 USB 連接埠。",
 	"Advanced_Appearance": "外觀",
-	"Settings_Appearance_Background": "Background",
-	"Settings_Appearance_BackgroundDesc": "Pick a background for the default space",
+	"Settings_Appearance_Background": "背景",
+	"Settings_Appearance_BackgroundDesc": "請選擇預設空間的背景",
 	"Settings_Appearance_UseDomeProjection": "使用圓頂投影",
 	"Settings_Appearance_UseDomeProjectionDesc": "更改背景圖片的投影樣式。有些背景圖片可透過此功能提高體驗的沉浸感。如果您選擇的背景看起來有些扭曲，請嘗試啟用此功能。",
 	"Settings_Appearance_DomeCameraHeight": "鏡頭高度",
 	"Settings_Appearance_DomeCameraHeightDesc": "調整鏡頭相對於背景的高度",
 	"Settings_Appearance_DomeCameraRadius": "圓頂半徑",
 	"Settings_Appearance_DomeCameraRadiusDesc": "變更圓頂的大小",
-	"Settings_Appearance_PlayAreaColor": "Play Area",
-	"Settings_Appearance_PlayAreaColorDesc": "Adjust the style of your play area. You will see this when games are loading, or if you have disabled SteamVR Home Beta",
-	"Settings_Appearance_MoreEnvironments": "Get more SteamVR Home Environments",
-	"Settings_Power_ReturnToWatchdogTimeout": "Exit SteamVR after",
-	"Settings_Power_TurnOffScreensTimeout": "Turn off displays after",
-	"Settings_Power_TurnOffControllersTimeout": "Turn off controllers after",
-	"Settings_Power_ControllerOffOnExit": "Turn off controllers when exiting SteamVR",
+	"Settings_Appearance_PlayAreaColor": "遊玩範圍",
+	"Settings_Appearance_PlayAreaColorDesc": "調整遊玩範圍的風格。您可以在遊戲載入時，或停用 SteamVR 家測試版後看到。",
+	"Settings_Appearance_MoreEnvironments": "取得更多 SteamVR 家的場景",
+	"Settings_Power_ReturnToWatchdogTimeout": "至此之後離開 SteamVR",
+	"Settings_Power_TurnOffScreensTimeout": "至此之後關閉畫面",
+	"Settings_Power_TurnOffControllersTimeout": "至此之後關閉控制器",
+	"Settings_Power_ControllerOffOnExit": "離開 SteamVR 時關閉控制器。",
 	"Settings_General_DoNotDisturb_Text": "在 VR 中時攔截通知",
-	"Settings_General_ShowBindingUI": "Edit Controller Bindings",
-	"Settings_General_ShowTrackerUI": "Manage Vive Trackers",
-	"Settings_Dashboard_ShowProgressIndicator": "Show progress indicator for long press actions",
+	"Settings_General_ShowBindingUI": "修改控制器配置",
+	"Settings_General_ShowTrackerUI": "管理 Vive 移動定位器",
+	"Settings_Dashboard_ShowProgressIndicator": "顯示長壓動作的進度標示",
 	"SettingsTime_5s": "5 秒",
 	"SettingsTime_30s": "30 秒",
 	"SettingsTime_1m": "1 分鐘",
@@ -183,9 +183,9 @@
 	"Settings_Chaperone_BoundsAlpha": "Alpha",
 	"Settings_Appearance_Controller": "變更控制器模型",
 	"Settings_Appearance_Base": "變更定位器模型",
-	"Settings_Appearance_Environment": "Change your home environment",
+	"Settings_Appearance_Environment": "變更家場景",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "永遠顯示地面邊界",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
 	"Settings_Connecting": "正在等待 SteamVR 啟動...",
-	"Settings_ResetToDefault": "Reset To Default"
+	"Settings_ResetToDefault": "重設為預設值"
 }
