--- a/resources/webinterface/dashboard/localization/webhelper_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_vietnamese.json
@@ -22,7 +22,7 @@
 	"PowerMenuHeader": "Trình đơn điện năng",
 	"IPD_Description": "Khoảng cách giữa các thấu kính",
 	"NoSteamWarning": "Steam hiện không khả dụng. Một vài tính năng có thể không hoạt động.",
-	"WakingUpBaseStations": "Waking up base stations...",
+	"WakingUpBaseStations": "Đang đánh thức các trạm theo dõi...",
 	"/input/joystick": "Cần điều khiển",
 	"/input/trackpad": "Bàn cảm ứng",
 	"/input/trigger": "Nút cò",
@@ -36,11 +36,11 @@
 	"/input/y": "Nút Y",
 	"/pose/raw": "Raw",
 	"/pose/base": "Đáy",
-	"/pose/tip": "Tip",
+	"/pose/tip": "Đỉnh đầu",
 	"/pose/gdc2015": "GDC",
 	"/pose/handgrip": "Tay nắm",
-	"/input/skeleton/left": "Left skeleton",
-	"/input/skeleton/right": "Right skeleton",
+	"/input/skeleton/left": "Khung xương trái",
+	"/input/skeleton/right": "Khung xương phải",
 	"/output/haptic": "Rung phản hồi",
 	"/user/hand/right": "Tay phải",
 	"/user/hand/left": "Tay trái",
@@ -55,12 +55,12 @@
 	"/user/chest": "Ngực",
 	"/user/camera": "Camera",
 	"/user/keyboard": "Bàn phím",
-	"InputSourceName": "%1$s %2$s %3$s",
-	"OriginString_All": "%1$s %2$s %3$s",
-	"OriginString_HandController": "%1$s %2$s",
+	"InputSourceName": "%2$s (%1$s) – %3$s",
+	"OriginString_All": "%2$s (%1$s) – %3$s",
+	"OriginString_HandController": "%2$s (%1$s)",
 	"OriginString_HandSource": "%1$s %3$s",
 	"OriginString_Hand": "%1$s",
-	"OriginString_ControllerSource": "%2$s %3$s",
+	"OriginString_ControllerSource": "%2$s – %3$s",
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
